--- a/demos_ch10/demo10_1.ipynb
+++ b/demos_ch10/demo10_1.ipynb
@@ -36,8 +36,9 @@
    "outputs": [],
    "source": [
     "import os, sys\n",
+    "\n",
     "# add utilities directory to path\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -52,7 +53,7 @@
    "outputs": [],
    "source": [
     "# edit default plot settings\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -63,8 +64,26 @@
    "source": [
     "# fake interesting distribution\n",
     "x = np.linspace(-3, 3, 200)\n",
-    "r = np.array([ 1.1 ,  1.3 , -0.1 , -0.7 ,  0.2 , -0.4 ,  0.06, -1.7 ,\n",
-    "               1.7 ,  0.3 ,  0.7 ,  1.6 , -2.06, -0.74,  0.2 ,  0.5 ])\n",
+    "r = np.array(\n",
+    "    [\n",
+    "        1.1,\n",
+    "        1.3,\n",
+    "        -0.1,\n",
+    "        -0.7,\n",
+    "        0.2,\n",
+    "        -0.4,\n",
+    "        0.06,\n",
+    "        -1.7,\n",
+    "        1.7,\n",
+    "        0.3,\n",
+    "        0.7,\n",
+    "        1.6,\n",
+    "        -2.06,\n",
+    "        -0.74,\n",
+    "        0.2,\n",
+    "        0.5,\n",
+    "    ]\n",
+    ")\n",
     "# Estimate the density (named q, to emphesize that it does not need to be\n",
     "# normalized). Parameter bw_method=0.48 is used to mimic the outcome of the\n",
     "# kernelp function in Matlab.\n",
@@ -82,7 +101,7 @@
     "g_std = 1.1\n",
     "g = stats.norm.pdf(x, loc=g_mean, scale=g_std)\n",
     "# M is computed by discrete approximation\n",
-    "M = np.max(q/g)\n",
+    "M = np.max(q / g)\n",
     "# prescale\n",
     "g *= M"
    ]
@@ -110,25 +129,25 @@
     "plt.figure(figsize=(8, 6))\n",
     "plot_tools.modify_axes.only_x(plt.gca())\n",
     "plt.plot(x, q)\n",
-    "plt.plot(x, g, linestyle='--')\n",
+    "plt.plot(x, g, linestyle=\"--\")\n",
     "plt.xlim([x[0], x[-1]])\n",
-    "plt.fill_between(x, q, color=plot_tools.lighten('C0', 0.9))\n",
-    "plt.legend((r'$q(\\theta|y)$', r'$Mg(\\theta)$'))\n",
+    "plt.fill_between(x, q, color=plot_tools.lighten(\"C0\", 0.9))\n",
+    "plt.legend((r\"$q(\\theta|y)$\", r\"$Mg(\\theta)$\"))\n",
     "\n",
     "# illustrate one sample\n",
     "r1 = -0.8\n",
-    "zi = np.argmin(np.abs(x-r1)) # find the closest grid point\n",
-    "plt.plot((x[zi], x[zi]), (0, q[zi]), color='gray')\n",
-    "plt.plot((x[zi], x[zi]), (q[zi], g[zi]), color='gray', linestyle='--')\n",
+    "zi = np.argmin(np.abs(x - r1))  # find the closest grid point\n",
+    "plt.plot((x[zi], x[zi]), (0, q[zi]), color=\"gray\")\n",
+    "plt.plot((x[zi], x[zi]), (q[zi], g[zi]), color=\"gray\", linestyle=\"--\")\n",
     "r21 = 0.3 * g[zi]\n",
     "r22 = 0.8 * g[zi]\n",
-    "plt.plot(r1, r21, marker='o', color=plot_tools.lighten('green'), markersize=12)\n",
-    "plt.plot(r1, r22, marker='o', color=plot_tools.lighten('red'), markersize=12)\n",
+    "plt.plot(r1, r21, marker=\"o\", color=plot_tools.lighten(\"green\"), markersize=12)\n",
+    "plt.plot(r1, r22, marker=\"o\", color=plot_tools.lighten(\"red\"), markersize=12)\n",
     "# add annotations\n",
-    "plt.text(x[zi], q[zi], r'$\\leftarrow \\, q(\\theta=r|y)$', fontsize=14)\n",
-    "plt.text(x[zi], g[zi], r'$\\leftarrow \\, g(\\theta=r)$', fontsize=14)\n",
-    "plt.text(r1-0.1, r21, 'accepted', ha='right')\n",
-    "plt.text(r1-0.1, r22, 'rejected', ha='right');"
+    "plt.text(x[zi], q[zi], r\"$\\leftarrow \\, q(\\theta=r|y)$\", fontsize=14)\n",
+    "plt.text(x[zi], g[zi], r\"$\\leftarrow \\, g(\\theta=r)$\", fontsize=14)\n",
+    "plt.text(r1 - 0.1, r21, \"accepted\", ha=\"right\")\n",
+    "plt.text(r1 - 0.1, r22, \"rejected\", ha=\"right\");"
    ]
   },
   {
@@ -140,7 +159,7 @@
     "# get nsamp samples\n",
     "nsamp = 200\n",
     "r1 = stats.norm.rvs(size=nsamp, loc=g_mean, scale=g_std)\n",
-    "zi = np.argmin(np.abs(x[:,None] - r1), axis=0)\n",
+    "zi = np.argmin(np.abs(x[:, None] - r1), axis=0)\n",
     "r2 = np.random.rand(nsamp) * g[zi]\n",
     "acc = r2 < q[zi]"
    ]
@@ -166,39 +185,32 @@
    "source": [
     "# plot the densities againg\n",
     "fig, axes = plt.subplots(\n",
-    "    2, 1,\n",
+    "    2,\n",
+    "    1,\n",
     "    figsize=(8, 7),\n",
     "    sharex=True,\n",
-    "    gridspec_kw=dict(\n",
-    "        height_ratios=[5, 1]\n",
-    "    ),\n",
+    "    gridspec_kw=dict(height_ratios=[5, 1]),\n",
     ")\n",
     "\n",
     "ax = axes[0]\n",
     "plot_tools.modify_axes.only_x(ax)\n",
-    "ax.plot(x, q, label=r'$q(\\theta|y)$')\n",
-    "ax.plot(x, g, linestyle='--', label=r'$Mg(\\theta)$')\n",
-    "ax.fill_between(x, q, color=plot_tools.lighten('C0', 0.9))\n",
+    "ax.plot(x, q, label=r\"$q(\\theta|y)$\")\n",
+    "ax.plot(x, g, linestyle=\"--\", label=r\"$Mg(\\theta)$\")\n",
+    "ax.fill_between(x, q, color=plot_tools.lighten(\"C0\", 0.9))\n",
     "# the samples\n",
     "ax.scatter(\n",
-    "    r1[~acc],\n",
-    "    r2[~acc],\n",
-    "    40,\n",
-    "    color=plot_tools.lighten('red'),\n",
-    "    label='rejected'\n",
+    "    r1[~acc], r2[~acc], 40, color=plot_tools.lighten(\"red\"), label=\"rejected\"\n",
     ")\n",
     "ax.scatter(\n",
-    "    r1[acc],\n",
-    "    r2[acc],\n",
-    "    40,\n",
-    "    color=plot_tools.lighten('green'),\n",
-    "    label='accepted'\n",
+    "    r1[acc], r2[acc], 40, color=plot_tools.lighten(\"green\"), label=\"accepted\"\n",
     ")\n",
     "ax.legend()\n",
     "\n",
-    "# only accepted samples \n",
+    "# only accepted samples\n",
     "ax = axes[1]\n",
-    "ax.scatter(r1[acc], np.ones(np.count_nonzero(acc)), 40, color='#4daf4a', alpha=0.3)\n",
+    "ax.scatter(\n",
+    "    r1[acc], np.ones(np.count_nonzero(acc)), 40, color=\"#4daf4a\", alpha=0.3\n",
+    ")\n",
     "ax.set_yticks(())\n",
     "ax.set_xlim((x[0], x[-1]))\n",
     "\n",
@@ -208,12 +220,14 @@
     "    if acc[i] and x[0] < r1[i] and r1[i] < x[-1]:\n",
     "        coord1 = transf.transform(axes[0].transData.transform([r1[i], r2[i]]))\n",
     "        coord2 = transf.transform(axes[1].transData.transform([r1[i], 1]))\n",
-    "        fig.lines.append(mpl.lines.Line2D(\n",
-    "            (coord1[0], coord2[0]),\n",
-    "            (coord1[1], coord2[1]),\n",
-    "            transform=fig.transFigure,\n",
-    "            alpha=0.2\n",
-    "        ));"
+    "        fig.lines.append(\n",
+    "            mpl.lines.Line2D(\n",
+    "                (coord1[0], coord2[0]),\n",
+    "                (coord1[1], coord2[1]),\n",
+    "                transform=fig.transFigure,\n",
+    "                alpha=0.2,\n",
+    "            )\n",
+    "        );"
    ]
   },
   {
@@ -237,30 +251,30 @@
    "source": [
     "# alternative proposal distribution\n",
     "g = np.empty(x.shape)\n",
-    "g[x <= -1.5] = np.linspace(q[0], np.max(q[x<=-1.5]), len(x[x<=-1.5]))\n",
+    "g[x <= -1.5] = np.linspace(q[0], np.max(q[x <= -1.5]), len(x[x <= -1.5]))\n",
     "g[(x > -1.5) & (x <= 0.2)] = np.linspace(\n",
-    "    np.max(q[x<=-1.5]),\n",
-    "    np.max(q[(x>-1.5) & (x<=0.2)]),\n",
-    "    len(x[(x>-1.5) & (x<=0.2)])\n",
+    "    np.max(q[x <= -1.5]),\n",
+    "    np.max(q[(x > -1.5) & (x <= 0.2)]),\n",
+    "    len(x[(x > -1.5) & (x <= 0.2)]),\n",
     ")\n",
     "g[(x > 0.2) & (x <= 2.3)] = np.linspace(\n",
-    "    np.max(q[(x>-1.5) & (x<=0.2)]),\n",
-    "    np.max(q[x>2.3]),\n",
-    "    len(x[(x>0.2) & (x<=2.3)])\n",
+    "    np.max(q[(x > -1.5) & (x <= 0.2)]),\n",
+    "    np.max(q[x > 2.3]),\n",
+    "    len(x[(x > 0.2) & (x <= 2.3)]),\n",
     ")\n",
-    "g[x > 2.3] = np.linspace(np.max(q[x>2.3]), q[-1], len(x[x>2.3]))\n",
-    "M = np.max(q/g)\n",
+    "g[x > 2.3] = np.linspace(np.max(q[x > 2.3]), q[-1], len(x[x > 2.3]))\n",
+    "M = np.max(q / g)\n",
     "g *= M\n",
     "\n",
     "# plot\n",
     "plt.figure(figsize=(8, 6))\n",
     "plot_tools.modify_axes.only_x(plt.gca())\n",
     "plt.plot(x, q)\n",
-    "plt.plot(x, g, linestyle='--')\n",
-    "plt.fill_between(x, q, color=plot_tools.lighten('C0', 0.9))\n",
-    "plt.legend((r'$q(\\theta|y)$', r'$Mg(\\theta)$'))\n",
+    "plt.plot(x, g, linestyle=\"--\")\n",
+    "plt.fill_between(x, q, color=plot_tools.lighten(\"C0\", 0.9))\n",
+    "plt.legend((r\"$q(\\theta|y)$\", r\"$Mg(\\theta)$\"))\n",
     "plt.xlim([x[0], x[-1]])\n",
-    "plt.title('alternative proposal distribution');"
+    "plt.title(\"alternative proposal distribution\");"
    ]
   }
  ],
