--- a/demos_ch10/demo10_3.ipynb
+++ b/demos_ch10/demo10_3.ipynb
@@ -30,8 +30,9 @@
    "outputs": [],
    "source": [
     "import os, sys\n",
+    "\n",
     "# add utilities directory to path\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -47,9 +48,9 @@
    "outputs": [],
    "source": [
     "# edit default plot settings\n",
-    "plt.rc('font', size=12)\n",
+    "plt.rc(\"font\", size=12)\n",
     "# apply custom background plotting style\n",
-    "plt.style.use(plot_tools.custom_styles['gray_background'])"
+    "plt.style.use(plot_tools.custom_styles[\"gray_background\"])"
    ]
   },
   {
@@ -77,8 +78,8 @@
     "ngrid = 100\n",
     "A = np.linspace(-4, 8, ngrid)\n",
     "B = np.linspace(-10, 40, ngrid)\n",
-    "ilogit_abx = 1 / (np.exp(-(A[:,None] + B[:,None,None] * x)) + 1)\n",
-    "p = np.prod(ilogit_abx**y * (1 - ilogit_abx)**(n - y), axis=2)"
+    "ilogit_abx = 1 / (np.exp(-(A[:, None] + B[:, None, None] * x)) + 1)\n",
+    "p = np.prod(ilogit_abx ** y * (1 - ilogit_abx) ** (n - y), axis=2)"
    ]
   },
   {
@@ -90,14 +91,13 @@
     "# sample from the grid\n",
     "nsamp = 1000\n",
     "samp_indices = np.unravel_index(\n",
-    "    np.random.choice(p.size, size=nsamp, p=p.ravel()/np.sum(p)),\n",
-    "    p.shape\n",
+    "    np.random.choice(p.size, size=nsamp, p=p.ravel() / np.sum(p)), p.shape\n",
     ")\n",
     "samp_A = A[samp_indices[1]]\n",
     "samp_B = B[samp_indices[0]]\n",
     "# add random jitter, see BDA3 p. 76\n",
-    "samp_A += (np.random.rand(nsamp) - 0.5) * (A[1]-A[0])\n",
-    "samp_B += (np.random.rand(nsamp) - 0.5) * (B[1]-B[0])\n",
+    "samp_A += (np.random.rand(nsamp) - 0.5) * (A[1] - A[0])\n",
+    "samp_B += (np.random.rand(nsamp) - 0.5) * (B[1] - B[0])\n",
     "\n",
     "# samples of LD50\n",
     "samp_ld50 = -samp_A / samp_B"
@@ -122,15 +122,17 @@
     "    b = w[1]\n",
     "    et = np.exp(a + b * x)\n",
     "    z = et / (1 + et)\n",
-    "    e = - np.sum(y * np.log(z) + (n - y) * np.log(1 - z))\n",
+    "    e = -np.sum(y * np.log(z) + (n - y) * np.log(1 - z))\n",
     "    return e\n",
+    "\n",
+    "\n",
     "# initial guess\n",
     "w0 = np.array([0.0, 0.0])\n",
     "# optimise\n",
     "optim_res = optimize.minimize(bioassayfun, w0)\n",
     "# extract desired results\n",
-    "w = optim_res['x']\n",
-    "S = optim_res['hess_inv']"
+    "w = optim_res[\"x\"]\n",
+    "S = optim_res[\"hess_inv\"]"
    ]
   },
   {
@@ -151,9 +153,11 @@
     "# can be applied to overcome this without unnecessary memory copies\n",
     "# (see Numpy's documentation for strides for more information):\n",
     "A_broadcasted = np.lib.stride_tricks.as_strided(\n",
-    "    A, shape=(ngrid,ngrid), strides=(0, A.strides[0]))\n",
+    "    A, shape=(ngrid, ngrid), strides=(0, A.strides[0])\n",
+    ")\n",
     "B_broadcasted = np.lib.stride_tricks.as_strided(\n",
-    "    B, shape=(ngrid,ngrid), strides=(B.strides[0], 0))\n",
+    "    B, shape=(ngrid, ngrid), strides=(B.strides[0], 0)\n",
+    ")\n",
     "grid = np.dstack((A_broadcasted, B_broadcasted))\n",
     "p_norm = stats.multivariate_normal.pdf(x=grid, mean=w, cov=S)\n",
     "\n",
@@ -188,10 +192,10 @@
    ],
    "source": [
     "lg = stats.multivariate_normal.logpdf(x=samp_norm, mean=w, cov=S)\n",
-    "Ar = samp_norm[:,0]\n",
-    "Br = samp_norm[:,1]\n",
-    "ilogit_abx = 1 / (np.exp(-(Ar[:,None] + Br[:,None] * x)) + 1)\n",
-    "lp = np.sum(np.log(ilogit_abx**y * (1 - ilogit_abx)**(n - y)), axis=1)\n",
+    "Ar = samp_norm[:, 0]\n",
+    "Br = samp_norm[:, 1]\n",
+    "ilogit_abx = 1 / (np.exp(-(Ar[:, None] + Br[:, None] * x)) + 1)\n",
+    "lp = np.sum(np.log(ilogit_abx ** y * (1 - ilogit_abx) ** (n - y)), axis=1)\n",
     "lw = lp - lg\n",
     "lw, pk = psis.psislw(lw)\n",
     "print(\"Pareto khat is {:.2}\".format(pk))"
@@ -217,11 +221,11 @@
     "rissamp_A = Ar[samp_indices]\n",
     "rissamp_B = Br[samp_indices]\n",
     "# add random jitter, see BDA3 p. 76\n",
-    "rissamp_A += (np.random.rand(nsamp) - 0.5) * (A[1]-A[0])\n",
-    "rissamp_B += (np.random.rand(nsamp) - 0.5) * (B[1]-B[0])\n",
+    "rissamp_A += (np.random.rand(nsamp) - 0.5) * (A[1] - A[0])\n",
+    "rissamp_B += (np.random.rand(nsamp) - 0.5) * (B[1] - B[0])\n",
     "\n",
     "# samples of LD50\n",
-    "rissamp_ld50 = - rissamp_A / rissamp_B"
+    "rissamp_ld50 = -rissamp_A / rissamp_B"
    ]
   },
   {
@@ -259,72 +263,64 @@
     "\n",
     "# plot the posterior density\n",
     "ax = axes[0, 0]\n",
-    "ax.imshow(\n",
-    "    p,\n",
-    "    origin='lower',\n",
-    "    aspect='auto',\n",
-    "    extent=(A[0], A[-1], B[0], B[-1])\n",
-    ")\n",
+    "ax.imshow(p, origin=\"lower\", aspect=\"auto\", extent=(A[0], A[-1], B[0], B[-1]))\n",
     "ax.set_xlim([-2, 6])\n",
     "ax.set_ylim([-10, 30])\n",
-    "ax.set_xlabel(r'$\\alpha$')\n",
-    "ax.set_ylabel(r'$\\beta$')\n",
-    "ax.grid('off')\n",
+    "ax.set_xlabel(r\"$\\alpha$\")\n",
+    "ax.set_ylabel(r\"$\\beta$\")\n",
+    "ax.grid(\"off\")\n",
     "\n",
     "# plot the samples\n",
     "ax = axes[1, 0]\n",
     "ax.scatter(samp_A, samp_B, 5)\n",
     "ax.set_xlim([-2, 6])\n",
     "ax.set_ylim([-10, 30])\n",
-    "ax.set_xlabel(r'$\\alpha$')\n",
-    "ax.set_ylabel(r'$\\beta$')\n",
-    "ax.text(0, -7, 'p(beta>0)={:.2f}'.format(np.mean(samp_B>0)))\n",
+    "ax.set_xlabel(r\"$\\alpha$\")\n",
+    "ax.set_ylabel(r\"$\\beta$\")\n",
+    "ax.text(0, -7, \"p(beta>0)={:.2f}\".format(np.mean(samp_B > 0)))\n",
     "\n",
     "# plot the histogram of LD50\n",
     "ax = axes[2, 0]\n",
     "ax.hist(samp_ld50, np.linspace(-0.8, 0.8, 31))\n",
     "ax.set_xlim([-0.8, 0.8])\n",
-    "ax.set_xlabel(r'LD50 = -$\\alpha/\\beta$')\n",
+    "ax.set_xlabel(r\"LD50 = -$\\alpha/\\beta$\")\n",
     "ax.set_yticks(())\n",
     "ax.set_xticks(np.linspace(-0.8, 0.8, 5))\n",
     "\n",
     "# plot the posterior density for normal approx.\n",
     "ax = axes[0, 1]\n",
     "ax.imshow(\n",
-    "    p_norm,\n",
-    "    origin='lower',\n",
-    "    aspect='auto',\n",
-    "    extent=(A[0], A[-1], B[0], B[-1])\n",
+    "    p_norm, origin=\"lower\", aspect=\"auto\", extent=(A[0], A[-1], B[0], B[-1])\n",
     ")\n",
     "ax.set_xlim([-2, 6])\n",
     "ax.set_ylim([-10, 30])\n",
-    "ax.set_xlabel(r'$\\alpha$')\n",
-    "ax.set_ylabel(r'$\\beta$')\n",
-    "ax.grid('off')\n",
+    "ax.set_xlabel(r\"$\\alpha$\")\n",
+    "ax.set_ylabel(r\"$\\beta$\")\n",
+    "ax.grid(\"off\")\n",
     "\n",
     "# plot the samples from the normal approx.\n",
     "ax = axes[1, 1]\n",
-    "ax.scatter(samp_norm[:,0], samp_norm[:,1], 5)\n",
+    "ax.scatter(samp_norm[:, 0], samp_norm[:, 1], 5)\n",
     "ax.set_xlim([-2, 6])\n",
     "ax.set_ylim([-10, 30])\n",
-    "ax.set_xlabel(r'$\\alpha$')\n",
-    "ax.set_ylabel(r'$\\beta$')\n",
+    "ax.set_xlabel(r\"$\\alpha$\")\n",
+    "ax.set_ylabel(r\"$\\beta$\")\n",
     "\n",
     "# Normal approximation does not take into account that the posterior\n",
     "# is not symmetric and that there is very low density for negative\n",
     "# beta values. Based on the samples from the normal approximation\n",
     "# it is estimated that there is about 4% probability that beta is negative!\n",
-    "ax.text(0, -7, 'p(beta>0)={:.2f}'.format(np.mean(samp_norm[:,1]>0)))\n",
+    "ax.text(0, -7, \"p(beta>0)={:.2f}\".format(np.mean(samp_norm[:, 1] > 0)))\n",
     "\n",
     "# Plot the histogram of LD50\n",
     "ax = axes[2, 1]\n",
     "# Since we have strong prior belief that beta should not be negative we can\n",
     "# improve our normal approximation by conditioning on beta>0.\n",
-    "bpi = samp_norm[:,1] > 0\n",
-    "samp_ld50_norm = - samp_norm[bpi,0] / samp_norm[bpi,1]\n",
+    "bpi = samp_norm[:, 1] > 0\n",
+    "samp_ld50_norm = -samp_norm[bpi, 0] / samp_norm[bpi, 1]\n",
     "ax.hist(samp_ld50_norm, np.linspace(-0.8, 0.8, 31))\n",
     "ax.set_xlim([-0.8, 0.8])\n",
-    "ax.set_xlabel(r'LD50 = -$\\alpha/\\beta$')\n",
+    "ax.set_xlabel(r\"LD50 = -$\\alpha/\\beta$\")\n",
     "ax.set_yticks(())\n",
     "ax.set_xticks(np.linspace(-0.8, 0.8, 5))\n",
     "\n",
@@ -333,22 +329,22 @@
     "ax.scatter(rissamp_A, rissamp_B, 5)\n",
     "ax.set_xlim([-2, 6])\n",
     "ax.set_ylim([-10, 30])\n",
-    "ax.set_xlabel(r'$\\alpha$')\n",
-    "ax.set_ylabel(r'$\\beta$')\n",
+    "ax.set_xlabel(r\"$\\alpha$\")\n",
+    "ax.set_ylabel(r\"$\\beta$\")\n",
     "\n",
     "# Importance sampling is able to improve the estimate of p(beta>0)\n",
-    "ax.text(0, -7, 'p(beta>0)={:.2f}'.format(np.mean(rissamp_B>0)))\n",
+    "ax.text(0, -7, \"p(beta>0)={:.2f}\".format(np.mean(rissamp_B > 0)))\n",
     "\n",
     "# Plot the histogram of LD50\n",
     "ax = axes[2, 2]\n",
     "ax.hist(rissamp_ld50, np.linspace(-0.8, 0.8, 31))\n",
     "ax.set_xlim([-0.8, 0.8])\n",
-    "ax.set_xlabel(r'LD50 = -$\\alpha/\\beta$')\n",
+    "ax.set_xlabel(r\"LD50 = -$\\alpha/\\beta$\")\n",
     "ax.set_yticks(())\n",
     "ax.set_xticks(np.linspace(-0.8, 0.8, 5))\n",
     "\n",
     "# hide unused subplot\n",
-    "axes[0, 2].axis('off')\n",
+    "axes[0, 2].axis(\"off\")\n",
     "\n",
     "fig.tight_layout()"
    ]
