--- a/demos_ch2/demo2_1.ipynb
+++ b/demos_ch2/demo2_1.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "# fast array routines for numerical calculation\n",
     "import numpy as np\n",
+    "\n",
     "# scipy contains various scietific tools, such as beta distribution\n",
     "from scipy.stats import beta"
    ]
@@ -42,7 +43,8 @@
    "source": [
     "# add utilities directory to path\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -57,7 +59,7 @@
    "outputs": [],
    "source": [
     "# edit default plot settings\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -100,7 +102,7 @@
     "# probability density function at x\n",
     "pd = dist.pdf(x)\n",
     "\n",
-    "print('Uniform prior -> Posterior is Beta(438,544)')\n",
+    "print(\"Uniform prior -> Posterior is Beta(438,544)\")\n",
     "\n",
     "# plot pd\n",
     "plt.plot(x, pd)\n",
@@ -109,33 +111,33 @@
     "\n",
     "# annotate the line\n",
     "plt.annotate(\n",
-    "    r'$p(\\theta|y,n)$',\n",
+    "    r\"$p(\\theta|y,n)$\",\n",
     "    (x[35] - 0.005, pd[35]),\n",
-    "    ha='right'  # horizontalalignment\n",
+    "    ha=\"right\",  # horizontalalignment\n",
     ")\n",
     "\n",
     "# plot proportion of girl babies in general population as a vertical line\n",
     "# ``color='C1'`` corresponds to default color #2\n",
-    "plt.axvline(0.485, color='C1')\n",
+    "plt.axvline(0.485, color=\"C1\")\n",
     "# annotate the line\n",
     "plt.annotate(\n",
-    "    'proportion in general\\npopulation',\n",
+    "    \"proportion in general\\npopulation\",\n",
     "    (0.485 + 0.005, 14),\n",
-    "    ha='left'  # horizontalalignment\n",
+    "    ha=\"left\",  # horizontalalignment\n",
     ")\n",
     "\n",
     "# find the points in x that are between 2.5% and 97.5% quantile\n",
     "# dist.ppf is percent point function (inverse of cdf)\n",
     "x_95_idx = (x > dist.ppf(0.025)) & (x < dist.ppf(0.975))\n",
     "# shade the 95% central posterior interval\n",
-    "plt.fill_between(x[x_95_idx], pd[x_95_idx], color='0.92')\n",
+    "plt.fill_between(x[x_95_idx], pd[x_95_idx], color=\"0.92\")\n",
     "# add text into the shaded area\n",
-    "plt.text(dist.median(), 8, \"95%\", horizontalalignment='center')\n",
+    "plt.text(dist.median(), 8, \"95%\", horizontalalignment=\"center\")\n",
     "# add labels and title\n",
-    "plt.xlabel(r'$\\theta$')\n",
+    "plt.xlabel(r\"$\\theta$\")\n",
     "\n",
     "# scale x-axis tightly to the data.\n",
-    "plt.autoscale(axis='x', tight=True);\n",
+    "plt.autoscale(axis=\"x\", tight=True)\n",
     "# N.B. the last semicolon is here just to prevent ipython notebook\n",
     "# from displaying the return value of the last command."
    ]
