--- a/demos_ch2/demo2_3.ipynb
+++ b/demos_ch2/demo2_3.ipynb
@@ -38,7 +38,8 @@
    "source": [
     "# add utilities directory to path\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -53,7 +54,7 @@
    "outputs": [],
    "source": [
     "# edit default plot settings\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -90,47 +91,35 @@
     "fig.subplots_adjust(hspace=0.5)\n",
     "\n",
     "# plot histogram\n",
-    "axes[0].hist(th, bins=30, color=plot_tools.lighten('C0'))\n",
+    "axes[0].hist(th, bins=30, color=plot_tools.lighten(\"C0\"))\n",
     "# compute 2.5% and 97.5% quantile approximation using samples\n",
     "th25, th975 = np.percentile(th, [2.5, 97.5])\n",
     "# draw lines for these\n",
-    "axes[0].axvline(th25, color='C1')\n",
-    "axes[0].axvline(th975, color='C1')\n",
+    "axes[0].axvline(th25, color=\"C1\")\n",
+    "axes[0].axvline(th975, color=\"C1\")\n",
     "axes[0].text(\n",
-    "    th25,\n",
-    "    axes[0].get_ylim()[1]+15,\n",
-    "    '2.5%',\n",
-    "    horizontalalignment='center'\n",
+    "    th25, axes[0].get_ylim()[1] + 15, \"2.5%\", horizontalalignment=\"center\"\n",
     ")\n",
     "axes[0].text(\n",
-    "    th975,\n",
-    "    axes[0].get_ylim()[1]+15,\n",
-    "    '97.5%',\n",
-    "    horizontalalignment='center'\n",
+    "    th975, axes[0].get_ylim()[1] + 15, \"97.5%\", horizontalalignment=\"center\"\n",
     ")\n",
-    "axes[0].set_xlabel(r'$\\theta$')\n",
+    "axes[0].set_xlabel(r\"$\\theta$\")\n",
     "\n",
     "# plot histogram for the transformed variable\n",
-    "phi = (1-th)/th\n",
-    "axes[1].hist(phi, bins=30, color=plot_tools.lighten('C0'))\n",
+    "phi = (1 - th) / th\n",
+    "axes[1].hist(phi, bins=30, color=plot_tools.lighten(\"C0\"))\n",
     "# compute 2.5% and 97.5% quantile approximation using samples\n",
     "phi25, phi975 = np.percentile(phi, [2.5, 97.5])\n",
     "# draw lines for these\n",
-    "axes[1].axvline(phi25, color='C1')\n",
-    "axes[1].axvline(phi975, color='C1')\n",
+    "axes[1].axvline(phi25, color=\"C1\")\n",
+    "axes[1].axvline(phi975, color=\"C1\")\n",
     "axes[1].text(\n",
-    "    phi25,\n",
-    "    axes[1].get_ylim()[1]+15,\n",
-    "    '2.5%',\n",
-    "     horizontalalignment='center'\n",
+    "    phi25, axes[1].get_ylim()[1] + 15, \"2.5%\", horizontalalignment=\"center\"\n",
     ")\n",
     "axes[1].text(\n",
-    "    phi975,\n",
-    "    axes[1].get_ylim()[1]+15,\n",
-    "    '97.5%',\n",
-    "    horizontalalignment='center'\n",
+    "    phi975, axes[1].get_ylim()[1] + 15, \"97.5%\", horizontalalignment=\"center\"\n",
     ")\n",
-    "axes[1].set_xlabel(r'$\\phi$');"
+    "axes[1].set_xlabel(r\"$\\phi$\");"
    ]
   },
   {
