--- a/demos_ch3/demo3_1-4.ipynb
+++ b/demos_ch3/demo3_1-4.ipynb
@@ -32,7 +32,8 @@
     "\n",
     "# add utilities directory to path\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -52,8 +53,8 @@
    },
    "outputs": [],
    "source": [
-    "plt.rc('font', size=12)\n",
-    "plt.style.use(plot_tools.custom_styles['gray_background'])"
+    "plt.rc(\"font\", size=12)\n",
+    "plt.style.use(plot_tools.custom_styles[\"gray_background\"])"
    ]
   },
   {
@@ -134,10 +135,10 @@
    },
    "outputs": [],
    "source": [
-    "sigma2 = sinvchi2.rvs(n-1, s2, size=1000, random_state=rng)\n",
-    "mu = my + np.sqrt(sigma2/n)*rng.randn(*sigma2.shape)\n",
+    "sigma2 = sinvchi2.rvs(n - 1, s2, size=1000, random_state=rng)\n",
+    "mu = my + np.sqrt(sigma2 / n) * rng.randn(*sigma2.shape)\n",
     "sigma = np.sqrt(sigma2)\n",
-    "ynew = rng.randn(*mu.shape)*sigma + mu"
+    "ynew = rng.randn(*mu.shape) * sigma + mu"
    ]
   },
   {
@@ -191,8 +192,12 @@
    },
    "outputs": [],
    "source": [
-    "Z = stats.norm.pdf(x=mu_grid, loc=my, scale=sig_grid[:,np.newaxis]/np.sqrt(n)) # posterior of mu at different values\n",
-    "Z *= (sinvchi2.pdf(x=sig_grid**2, nu=n-1, s2=s2)*2*sig_grid)[:,np.newaxis]  # multiply by posterior of sigma^2 to get joint unnormalized posterior"
+    "Z = stats.norm.pdf(\n",
+    "    x=mu_grid, loc=my, scale=sig_grid[:, np.newaxis] / np.sqrt(n)\n",
+    ")  # posterior of mu at different values\n",
+    "Z *= (sinvchi2.pdf(x=sig_grid ** 2, nu=n - 1, s2=s2) * 2 * sig_grid)[\n",
+    "    :, np.newaxis\n",
+    "]  # multiply by posterior of sigma^2 to get joint unnormalized posterior"
    ]
   },
   {
@@ -221,15 +226,17 @@
    },
    "outputs": [],
    "source": [
-    "pm_mu = stats.t.pdf((mu_grid - my) / np.sqrt(s2/n), n-1) / np.sqrt(s2/n)\n",
-    "pm_sigma = sinvchi2.pdf(sig_grid**2, n-1, s2)*2*sig_grid\n",
+    "pm_mu = stats.t.pdf((mu_grid - my) / np.sqrt(s2 / n), n - 1) / np.sqrt(s2 / n)\n",
+    "pm_sigma = sinvchi2.pdf(sig_grid ** 2, n - 1, s2) * 2 * sig_grid\n",
     "\n",
     "# estimate marginal density for mu & sigma using samples & ad-hoc Gaussian KDE\n",
     "pk_mu = stats.gaussian_kde(mu).evaluate(mu_grid)\n",
     "pk_sigma = stats.gaussian_kde(sigma).evaluate(sig_grid)\n",
     "\n",
     "# compute the exact predictive density:\n",
-    "p_new = stats.t.pdf((xynew-my)/np.sqrt(s2*(1+1/n)), n-1) / np.sqrt(s2*(1+1/n))"
+    "p_new = stats.t.pdf((xynew - my) / np.sqrt(s2 * (1 + 1 / n)), n - 1) / np.sqrt(\n",
+    "    s2 * (1 + 1 / n)\n",
+    ")"
    ]
   },
   {
@@ -272,49 +279,36 @@
     }
    ],
    "source": [
-    "print('Joint and marginal posterior distributions')\n",
+    "print(\"Joint and marginal posterior distributions\")\n",
     "\n",
     "# create figure\n",
     "fig, axes = plt.subplots(\n",
-    "    2, 2,\n",
+    "    2,\n",
+    "    2,\n",
     "    figsize=(9, 9),\n",
-    "    gridspec_kw=dict(\n",
-    "        width_ratios=[2, 1],\n",
-    "        height_ratios=[1, 2]\n",
-    "    )\n",
+    "    gridspec_kw=dict(width_ratios=[2, 1], height_ratios=[1, 2]),\n",
     ")\n",
     "\n",
     "# plot the joint distribution\n",
     "ax = axes[1, 0]\n",
     "# plot the samples from the joint posterior\n",
-    "samps = ax.scatter(mu, sigma, 5, color=plot_tools.lighten('C2', 0.3))\n",
+    "samps = ax.scatter(mu, sigma, 5, color=plot_tools.lighten(\"C2\", 0.3))\n",
     "# plot the contour plot of the exact posterior (c_levels is used to give\n",
     "# a vector of linearly spaced values at which levels contours are drawn)\n",
     "c_levels = np.linspace(1e-5, Z.max(), 6)[:-1]\n",
-    "ax.contour(mu_grid, sig_grid, Z, c_levels, colors='C0')\n",
+    "ax.contour(mu_grid, sig_grid, Z, c_levels, colors=\"C0\")\n",
     "# decorate\n",
     "ax.set_xlim(tl1)\n",
     "ax.set_ylim(tl2)\n",
-    "ax.set_xlabel('$\\mu$', fontsize='14')\n",
-    "ax.set_ylabel('$\\sigma$', fontsize='14')\n",
+    "ax.set_xlabel(\"$\\mu$\", fontsize=\"14\")\n",
+    "ax.set_ylabel(\"$\\sigma$\", fontsize=\"14\")\n",
     "\n",
     "# plot the marginal of mu\n",
     "ax = axes[0, 0]\n",
     "# exact\n",
-    "ax.plot(\n",
-    "    mu_grid,\n",
-    "    pm_mu,\n",
-    "    color=plot_tools.lighten('C1'),\n",
-    "    linewidth=5\n",
-    ")\n",
+    "ax.plot(mu_grid, pm_mu, color=plot_tools.lighten(\"C1\"), linewidth=5)\n",
     "# empirical\n",
-    "ax.plot(\n",
-    "    mu_grid,\n",
-    "    pk_mu,\n",
-    "    color='k',\n",
-    "    dashes=(5, 7),\n",
-    "    linewidth=1.5\n",
-    ")\n",
+    "ax.plot(mu_grid, pk_mu, color=\"k\", dashes=(5, 7), linewidth=1.5)\n",
     "# decorate\n",
     "ax.set_xlim(tl1)\n",
     "ax.set_yticks(())\n",
@@ -323,19 +317,12 @@
     "# plot the marginal of sigma\n",
     "ax = axes[1, 1]\n",
     "# exact\n",
-    "exact_line, = ax.plot(\n",
-    "    pm_sigma,\n",
-    "    sig_grid,\n",
-    "    color=plot_tools.lighten('C1'),\n",
-    "    linewidth=5\n",
+    "(exact_line,) = ax.plot(\n",
+    "    pm_sigma, sig_grid, color=plot_tools.lighten(\"C1\"), linewidth=5\n",
     ")\n",
     "# empirical\n",
-    "empirical_line, = ax.plot(\n",
-    "    pk_sigma,\n",
-    "    sig_grid,\n",
-    "    color='k',\n",
-    "    dashes=(5, 7),\n",
-    "    linewidth=1.5\n",
+    "(empirical_line,) = ax.plot(\n",
+    "    pk_sigma, sig_grid, color=\"k\", dashes=(5, 7), linewidth=1.5\n",
     ")\n",
     "# decorate\n",
     "ax.set_ylim(tl2)\n",
@@ -344,22 +331,12 @@
     "\n",
     "# hide last ax\n",
     "ax = axes[0, 1]\n",
-    "ax.axis('off')\n",
+    "ax.axis(\"off\")\n",
     "# make legend there\n",
     "ax.legend(\n",
-    "    (\n",
-    "        samps,\n",
-    "        plt.Line2D([], [], color='C0'),\n",
-    "        exact_line,\n",
-    "        empirical_line\n",
-    "    ),\n",
-    "    (\n",
-    "        'samples',\n",
-    "        'exact joint contour',\n",
-    "        'exact marginal',\n",
-    "        'empirical marginal'\n",
-    "    ),\n",
-    "    loc='center',\n",
+    "    (samps, plt.Line2D([], [], color=\"C0\"), exact_line, empirical_line),\n",
+    "    (\"samples\", \"exact joint contour\", \"exact marginal\", \"empirical marginal\"),\n",
+    "    loc=\"center\",\n",
     ")\n",
     "\n",
     "fig.tight_layout()"
@@ -398,9 +375,7 @@
    "source": [
     "# create figure\n",
     "fig, axes = plt.subplots(\n",
-    "    1, 2,\n",
-    "    figsize=(9, 6),\n",
-    "    gridspec_kw=dict(width_ratios=[2, 1])\n",
+    "    1, 2, figsize=(9, 6), gridspec_kw=dict(width_ratios=[2, 1])\n",
     ")\n",
     "\n",
     "# plot the joint distribution\n",
@@ -408,32 +383,34 @@
     "# plot the contour plot of the exact posterior (c_levels is used to give\n",
     "# a vector of linearly spaced values at which levels contours are drawn)\n",
     "c_levels = np.linspace(1e-5, Z.max(), 6)[:-1]\n",
-    "ax.contour(mu_grid, sig_grid, Z, c_levels, colors='C0')\n",
+    "ax.contour(mu_grid, sig_grid, Z, c_levels, colors=\"C0\")\n",
     "\n",
     "# plot the first sample\n",
-    "line1, = ax.plot(tl1, [sigma[0], sigma[0]], 'k')\n",
-    "line2, = ax.plot(\n",
+    "(line1,) = ax.plot(tl1, [sigma[0], sigma[0]], \"k\")\n",
+    "(line2,) = ax.plot(\n",
     "    mu_grid,\n",
-    "    sigma[0] + stats.norm.pdf(mu_grid, my, np.sqrt(sigma2[0]/n))*100,\n",
-    "    color='C1',\n",
-    "    linestyle='dashed',\n",
-    "    linewidth=2\n",
+    "    sigma[0] + stats.norm.pdf(mu_grid, my, np.sqrt(sigma2[0] / n)) * 100,\n",
+    "    color=\"C1\",\n",
+    "    linestyle=\"dashed\",\n",
+    "    linewidth=2,\n",
     ")\n",
-    "scat = ax.scatter(mu[0], sigma[0], 40, color='r')\n",
+    "scat = ax.scatter(mu[0], sigma[0], 40, color=\"r\")\n",
     "\n",
     "# decorate\n",
     "ax.set_xlim(tl1)\n",
     "ax.set_ylim(tl2)\n",
-    "ax.set_xlabel('$\\mu$', fontsize=14)\n",
-    "ax.set_ylabel('$\\sigma$', fontsize=14)\n",
-    "ax.set_title('joint posterior')\n",
+    "ax.set_xlabel(\"$\\mu$\", fontsize=14)\n",
+    "ax.set_ylabel(\"$\\sigma$\", fontsize=14)\n",
+    "ax.set_title(\"joint posterior\")\n",
     "ax.legend(\n",
-    "    (plt.Line2D([], [], color='C0'), line1, line2, scat),\n",
-    "    ('exact contour plot',\n",
-    "     'sample from the marginal of $\\\\sigma$',\n",
-    "     'conditional distribution of $\\\\mu$',\n",
-    "     'sample from joint posterior'),\n",
-    "    loc='upper center'\n",
+    "    (plt.Line2D([], [], color=\"C0\"), line1, line2, scat),\n",
+    "    (\n",
+    "        \"exact contour plot\",\n",
+    "        \"sample from the marginal of $\\\\sigma$\",\n",
+    "        \"conditional distribution of $\\\\mu$\",\n",
+    "        \"sample from joint posterior\",\n",
+    "    ),\n",
+    "    loc=\"upper center\",\n",
     ")\n",
     "\n",
     "# plot the marginal of sigma\n",
@@ -441,8 +418,8 @@
     "ax.plot(pm_sigma, sig_grid)\n",
     "# decorate\n",
     "ax.set_ylim(tl2)\n",
-    "ax.set_title('marginal of $\\sigma$')\n",
-    "ax.set_xticks(());\n",
+    "ax.set_title(\"marginal of $\\sigma$\")\n",
+    "ax.set_xticks(())\n",
     "ax.set_yticklabels(())\n",
     "\n",
     "fig.tight_layout()"
@@ -480,17 +457,17 @@
    ],
    "source": [
     "# calculate conditional pdfs for each sample from the posterior of sigma2\n",
-    "condpdfs = stats.norm.pdf(mu_grid, my, np.sqrt(sigma2/n)[:, np.newaxis])\n",
+    "condpdfs = stats.norm.pdf(mu_grid, my, np.sqrt(sigma2 / n)[:, np.newaxis])\n",
     "\n",
     "# create figure\n",
     "fig, axes = plt.subplots(2, 1, figsize=(6, 9), sharex=True)\n",
     "\n",
     "# plot some of them\n",
     "ax = axes[0]\n",
-    "ax.plot(mu_grid, condpdfs[:25].T, 'C2', alpha=0.25)\n",
+    "ax.plot(mu_grid, condpdfs[:25].T, \"C2\", alpha=0.25)\n",
     "ax.set_xlim(tl1)\n",
     "ylims_from_0 = ax.set_ylim()  # set same y_lims to the next plot\n",
-    "ax.set_title('conditional distribution of $\\\\mu$ for first 25 samples')\n",
+    "ax.set_title(\"conditional distribution of $\\\\mu$ for first 25 samples\")\n",
     "ax.set_yticks(())\n",
     "\n",
     "# plot their mean\n",
@@ -498,22 +475,22 @@
     "ax.plot(\n",
     "    mu_grid,\n",
     "    np.mean(condpdfs, axis=0),\n",
-    "    color=plot_tools.lighten('C1'),\n",
+    "    color=plot_tools.lighten(\"C1\"),\n",
     "    linewidth=5,\n",
-    "    label='average of sampled conditionals'\n",
+    "    label=\"average of sampled conditionals\",\n",
     ")\n",
     "ax.plot(\n",
     "    mu_grid,\n",
     "    pm_mu,\n",
-    "    color='k',\n",
+    "    color=\"k\",\n",
     "    dashes=(5, 7),\n",
     "    linewidth=1.5,\n",
-    "    label='exact marginal of $\\\\mu$'\n",
+    "    label=\"exact marginal of $\\\\mu$\",\n",
     ")\n",
     "ax.set_yticks(())\n",
     "ax.set_xlim(tl1)\n",
     "ax.set_ylim(ylims_from_0)\n",
-    "ax.legend(loc='upper center')\n",
+    "ax.legend(loc=\"upper center\")\n",
     "\n",
     "fig.tight_layout()"
    ]
@@ -558,64 +535,61 @@
     "# plot the joint distribution\n",
     "ax = axes[0]\n",
     "# plot the samples from the joint posterior\n",
-    "samps = ax.scatter(mu, sigma, 5, color=plot_tools.lighten('C2', 0.3))\n",
+    "samps = ax.scatter(mu, sigma, 5, color=plot_tools.lighten(\"C2\", 0.3))\n",
     "# plot the contour plot of the exact posterior (c_levels is used to give\n",
     "# a vector of linearly spaced values at which levels contours are drawn)\n",
     "c_levels = np.linspace(1e-5, Z.max(), 6)[:-1]\n",
-    "ax.contour(mu_grid, sig_grid, Z, c_levels, colors='C0')\n",
+    "ax.contour(mu_grid, sig_grid, Z, c_levels, colors=\"C0\")\n",
     "# decorate\n",
     "ax.set_xlim(tl1)\n",
     "ax.set_ylim(tl2)\n",
-    "ax.set_xlabel('$\\mu$', fontsize=14)\n",
-    "ax.set_ylabel('$\\sigma$', fontsize=14)\n",
+    "ax.set_xlabel(\"$\\mu$\", fontsize=14)\n",
+    "ax.set_ylabel(\"$\\sigma$\", fontsize=14)\n",
     "ax.legend(\n",
-    "    (plt.Line2D([], [], color='C0'), samps),\n",
-    "    ('exact joint posterior contour', 'joint posterior samples'),\n",
-    "    loc='center left',\n",
-    "    bbox_to_anchor=(1, 0.5)\n",
+    "    (plt.Line2D([], [], color=\"C0\"), samps),\n",
+    "    (\"exact joint posterior contour\", \"joint posterior samples\"),\n",
+    "    loc=\"center left\",\n",
+    "    bbox_to_anchor=(1, 0.5),\n",
     ")\n",
     "# highlight the first sample\n",
-    "ax.scatter(mu[0], sigma[0], 40, 'r')\n",
+    "ax.scatter(mu[0], sigma[0], 40, \"r\")\n",
     "\n",
     "# plot first ynew\n",
     "ax = axes[1]\n",
     "# plot the distribution and the respective sample\n",
-    "line1, = ax.plot(xynew, ynewdists)\n",
-    "ax1_hs = ax.scatter(ynew[0], 0.02*np.max(ynewdists), 40, 'r')\n",
+    "(line1,) = ax.plot(xynew, ynewdists)\n",
+    "ax1_hs = ax.scatter(ynew[0], 0.02 * np.max(ynewdists), 40, \"r\")\n",
     "# decorate\n",
     "ylims_from_1 = ax.set_ylim()\n",
     "ax.set_xlim(tlynew)\n",
-    "ax.set_xlabel('$\\widetilde{y}$', fontsize=14)\n",
+    "ax.set_xlabel(\"$\\widetilde{y}$\", fontsize=14)\n",
     "ax.set_yticks(())\n",
     "ax.legend(\n",
     "    (line1, ax1_hs),\n",
-    "    ('pred.dist. given the posterior sample',\n",
-    "    'sample from the predictive distribution'),\n",
-    "    loc='center left',\n",
-    "    bbox_to_anchor=(1, 0.5)\n",
+    "    (\n",
+    "        \"pred.dist. given the posterior sample\",\n",
+    "        \"sample from the predictive distribution\",\n",
+    "    ),\n",
+    "    loc=\"center left\",\n",
+    "    bbox_to_anchor=(1, 0.5),\n",
     ")\n",
     "\n",
     "# plot all ynews\n",
     "ax = axes[2]\n",
     "ax.scatter(\n",
     "    ynew,\n",
-    "    (0.02 + 0.05*rng.rand(*ynew.shape))*np.max(ynewdists),\n",
+    "    (0.02 + 0.05 * rng.rand(*ynew.shape)) * np.max(ynewdists),\n",
     "    10,\n",
-    "    color='C2',\n",
+    "    color=\"C2\",\n",
     "    alpha=0.2,\n",
-    "    label='samples from the predictive distribution'\n",
+    "    label=\"samples from the predictive distribution\",\n",
     ")\n",
-    "ax.plot(\n",
-    "    xynew,\n",
-    "    p_new,\n",
-    "    linewidth=1.5,\n",
-    "    label='exact predictive distribution'\n",
-    ")\n",
+    "ax.plot(xynew, p_new, linewidth=1.5, label=\"exact predictive distribution\")\n",
     "ax.set_ylim(ylims_from_1)\n",
     "ax.set_xlim(tlynew)\n",
-    "ax.set_xlabel('$\\widetilde{y}$', fontsize=14)\n",
+    "ax.set_xlabel(\"$\\widetilde{y}$\", fontsize=14)\n",
     "ax.set_yticks(())\n",
-    "ax.legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
+    "ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n",
     "\n",
     "fig.tight_layout()"
    ]
