--- a/demos_ch3/demo3_5.ipynb
+++ b/demos_ch3/demo3_5.ipynb
@@ -28,8 +28,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import os, sys\n",
+    "\n",
     "# add utilities directory to path\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -37,9 +38,9 @@
     "import plot_tools\n",
     "\n",
     "# edit default plot settings\n",
-    "plt.rc('font', size=12)\n",
+    "plt.rc(\"font\", size=12)\n",
     "# apply custom background plotting style\n",
-    "plt.style.use(plot_tools.custom_styles['gray_background'])"
+    "plt.style.use(plot_tools.custom_styles[\"gray_background\"])"
    ]
   },
   {
@@ -62,11 +63,7 @@
    "source": [
     "# data\n",
     "data_path = os.path.abspath(\n",
-    "    os.path.join(\n",
-    "        os.path.pardir,\n",
-    "        'utilities_and_data',\n",
-    "        'light.txt'\n",
-    "    )\n",
+    "    os.path.join(os.path.pardir, \"utilities_and_data\", \"light.txt\")\n",
     ")\n",
     "y = np.loadtxt(data_path)\n",
     "# sufficient statistics\n",
@@ -100,13 +97,12 @@
     "# compute the exact marginal density for mu\n",
     "# multiplication by 1./sqrt(s2/n) is due to the transformation of variable\n",
     "# z=(x-mean(y))/sqrt(s2/n), see BDA3 p. 21\n",
-    "pm_mu = stats.t.pdf((t1 - my) / np.sqrt(s2/n), n-1) / np.sqrt(s2/n)\n",
+    "pm_mu = stats.t.pdf((t1 - my) / np.sqrt(s2 / n), n - 1) / np.sqrt(s2 / n)\n",
     "\n",
     "# compute the exact marginal density for mu for the filtered data\n",
-    "pm_mu_pos = (\n",
-    "    stats.t.pdf((t1 - my_pos) / np.sqrt(s2_pos/n_pos), n_pos-1) /\n",
-    "    np.sqrt(s2_pos/n_pos)\n",
-    ")"
+    "pm_mu_pos = stats.t.pdf(\n",
+    "    (t1 - my_pos) / np.sqrt(s2_pos / n_pos), n_pos - 1\n",
+    ") / np.sqrt(s2_pos / n_pos)"
    ]
   },
   {
@@ -142,10 +138,10 @@
     "ax = axes[0]\n",
     "ax.hist(y, np.arange(-44, 43, 2))\n",
     "# decorate\n",
-    "ax.set_title('Newcomb\\'s measurements')\n",
-    "ax.set_ylabel('count')\n",
-    "ax.set_xlabel('$\\mu$')\n",
-    "ax.tick_params(axis='x', reset=True, top=False)\n",
+    "ax.set_title(\"Newcomb's measurements\")\n",
+    "ax.set_ylabel(\"count\")\n",
+    "ax.set_xlabel(\"$\\mu$\")\n",
+    "ax.tick_params(axis=\"x\", reset=True, top=False)\n",
     "\n",
     "# plot the posterior of mu\n",
     "ax = axes[1]\n",
@@ -153,15 +149,13 @@
     "# plot the posterior of mu in the filtered case\n",
     "ax.plot(t1, pm_mu_pos)\n",
     "# Plot the currently accepted true value\n",
-    "ax.axvline(33, color='k', linestyle='--')\n",
+    "ax.axvline(33, color=\"k\", linestyle=\"--\")\n",
     "ax.legend(\n",
-    "    ('posterior of $\\mu$',\n",
-    "     'posterior of $\\mu$ given $y > 0$',\n",
-    "     '\"true value\"'),\n",
-    "    loc='upper left'\n",
+    "    (\"posterior of $\\mu$\", \"posterior of $\\mu$ given $y > 0$\", '\"true value\"'),\n",
+    "    loc=\"upper left\",\n",
     ")\n",
-    "ax.set_title('Normal model')\n",
-    "ax.set_xlabel('$\\mu$')\n",
+    "ax.set_title(\"Normal model\")\n",
+    "ax.set_xlabel(\"$\\mu$\")\n",
     "ax.set_yticks(())\n",
     "# set bottom to zero\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))\n",
