--- a/demos_ch3/demo3_6.ipynb
+++ b/demos_ch3/demo3_6.ipynb
@@ -48,14 +48,14 @@
     "\n",
     "import os, sys\n",
     "\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
     "import plot_tools\n",
     "\n",
-    "plt.rc('font', size=12)\n",
-    "plt.style.use(plot_tools.custom_styles['gray_background'])\n",
+    "plt.rc(\"font\", size=12)\n",
+    "plt.style.use(plot_tools.custom_styles[\"gray_background\"])\n",
     "\n",
     "rng = np.random.RandomState(0)"
    ]
@@ -139,10 +139,10 @@
     }
    ],
    "source": [
-    "plt.scatter(x, y/n, 50, color='red')\n",
+    "plt.scatter(x, y / n, 50, color=\"red\")\n",
     "plt.xlim((-1, 1))\n",
-    "plt.xlabel(f'log dose, $x_i$')\n",
-    "plt.ylabel('proportion of deaths, $y_i/n_i$');"
+    "plt.xlabel(f\"log dose, $x_i$\")\n",
+    "plt.ylabel(\"proportion of deaths, $y_i/n_i$\");"
    ]
   },
   {
@@ -163,7 +163,12 @@
     "sd_alpha = 2\n",
     "sd_beta = 10\n",
     "corr = 0.5\n",
-    "cov = np.array([[sd_alpha**2, sd_alpha*sd_beta*corr], [sd_alpha*sd_beta*corr, sd_beta**2]])\n",
+    "cov = np.array(\n",
+    "    [\n",
+    "        [sd_alpha ** 2, sd_alpha * sd_beta * corr],\n",
+    "        [sd_alpha * sd_beta * corr, sd_beta ** 2],\n",
+    "    ]\n",
+    ")\n",
     "prior = stats.multivariate_normal(mean=[mu_alpha, mu_beta], cov=cov)"
    ]
   },
@@ -188,7 +193,9 @@
    "source": [
     "alpha_min, alpha_max = -8, 8\n",
     "beta_min, beta_max = -40, 40\n",
-    "alpha_grid, beta_grid = np.mgrid[alpha_min:alpha_max:.05, beta_min:beta_max:.1]\n",
+    "alpha_grid, beta_grid = np.mgrid[\n",
+    "    alpha_min:alpha_max:0.05, beta_min:beta_max:0.1\n",
+    "]\n",
     "prior_grid = np.dstack((alpha_grid, beta_grid))\n",
     "\n",
     "prior_pdf = prior.pdf(prior_grid)\n",
@@ -197,9 +204,9 @@
     "# Plot\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111)\n",
-    "ax.contourf(alpha_grid, beta_grid, prior_pdf);\n",
-    "ax.set_xlabel(\"alpha\");\n",
-    "ax.set_ylabel(\"beta\");\n",
+    "ax.contourf(alpha_grid, beta_grid, prior_pdf)\n",
+    "ax.set_xlabel(\"alpha\")\n",
+    "ax.set_ylabel(\"beta\")\n",
     "ax.set_title(\"Prior\");"
    ]
   },
@@ -240,17 +247,21 @@
    "outputs": [],
    "source": [
     "def calculate_posterior(alpha_grid, beta_grid, x, use_prior):\n",
-    "    add_mvnorm_flag = 1 if use_prior else 0 \n",
-    "    \n",
+    "    add_mvnorm_flag = 1 if use_prior else 0\n",
+    "\n",
     "    abx = alpha_grid[:, :, None] + beta_grid[:, :, None] * x\n",
     "    ilogit_abx = 1 / (np.exp(-abx) + 1)\n",
-    "    likelihood = ilogit_abx**y * (1 - ilogit_abx)**(n - y)\n",
-    "    log_likelihood = -(n - y)*(abx) - n*np.log(1 + np.exp(-abx))\n",
+    "    likelihood = ilogit_abx ** y * (1 - ilogit_abx) ** (n - y)\n",
+    "    log_likelihood = -(n - y) * (abx) - n * np.log(1 + np.exp(-abx))\n",
     "    joint_log_likelihood = log_likelihood.sum(2)\n",
     "    joint_likelihood = np.prod(likelihood, axis=2)\n",
     "\n",
     "    joint_log_posterior = joint_log_likelihood + prior_logpdf * add_mvnorm_flag\n",
-    "    posterior = np.exp(joint_log_posterior - joint_log_posterior.max()) if use_prior else joint_likelihood\n",
+    "    posterior = (\n",
+    "        np.exp(joint_log_posterior - joint_log_posterior.max())\n",
+    "        if use_prior\n",
+    "        else joint_likelihood\n",
+    "    )\n",
     "    return posterior"
    ]
   },
@@ -260,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def summarise_array(arr, q = [0.05, 0.25, 0.5, 0.75, 0.95]):\n",
+    "def summarise_array(arr, q=[0.05, 0.25, 0.5, 0.75, 0.95]):\n",
     "    print(f\"Mean: {np.mean(arr):.4f}\")\n",
     "    for x in q:\n",
     "        print(f\"{x:.2f}: {np.quantile(arr, x):.4f}\")"
@@ -295,16 +306,18 @@
    "source": [
     "nsamp = 2500\n",
     "samp_indices = np.unravel_index(\n",
-    "    rng.choice(posterior.size, size=nsamp, p=posterior.ravel()/np.sum(posterior)),\n",
-    "    posterior.shape\n",
+    "    rng.choice(\n",
+    "        posterior.size, size=nsamp, p=posterior.ravel() / np.sum(posterior)\n",
+    "    ),\n",
+    "    posterior.shape,\n",
     ")\n",
     "\n",
     "samp_A_raw = alpha_grid[samp_indices[0], samp_indices[1]]\n",
     "samp_B_raw = beta_grid[samp_indices[0], samp_indices[1]]\n",
     "\n",
     "# Jitter a bit:\n",
-    "samp_A = samp_A_raw + (np.random.rand(len(samp_A_raw)) - 0.5)/10\n",
-    "samp_B = samp_B_raw + (np.random.rand(len(samp_B_raw)) - 0.5)/10"
+    "samp_A = samp_A_raw + (np.random.rand(len(samp_A_raw)) - 0.5) / 10\n",
+    "samp_B = samp_B_raw + (np.random.rand(len(samp_B_raw)) - 0.5) / 10"
    ]
   },
   {
@@ -377,33 +390,32 @@
    "source": [
     "x_min, x_max = -2, 8\n",
     "y_min, y_max = -2, 40\n",
-    "    \n",
+    "\n",
     "# create figure\n",
     "fig, axes = plt.subplots(2, 1, figsize=(9, 12), sharex=True)\n",
     "\n",
     "# plot the posterior density\n",
     "ax = axes[0]\n",
-    "ax.imshow(posterior.T, \n",
-    "          origin='lower', \n",
-    "          aspect='auto', \n",
-    "          extent=(alpha_min, alpha_max, beta_min, beta_max)\n",
-    "         )\n",
+    "ax.imshow(\n",
+    "    posterior.T,\n",
+    "    origin=\"lower\",\n",
+    "    aspect=\"auto\",\n",
+    "    extent=(alpha_min, alpha_max, beta_min, beta_max),\n",
+    ")\n",
     "ax.set_xlim([x_min, x_max])\n",
     "ax.set_ylim([y_min, y_max])\n",
-    "ax.set_ylabel(r'$\\beta$')\n",
-    "ax.grid('off')\n",
-    "ax.set_title('posterior density')\n",
+    "ax.set_ylabel(r\"$\\beta$\")\n",
+    "ax.grid(\"off\")\n",
+    "ax.set_title(\"posterior density\")\n",
     "\n",
     "# plot the samples\n",
     "ax = axes[1]\n",
-    "ax.scatter(samp_A, \n",
-    "           samp_B, \n",
-    "           10, linewidth=0, alpha=1)\n",
+    "ax.scatter(samp_A, samp_B, 10, linewidth=0, alpha=1)\n",
     "ax.set_xlim([x_min, x_max])\n",
     "ax.set_ylim([y_min, y_max])\n",
-    "ax.set_xlabel(r'$\\alpha$')\n",
-    "ax.set_ylabel(r'$\\beta$')\n",
-    "ax.set_title('samples')\n",
+    "ax.set_xlabel(r\"$\\alpha$\")\n",
+    "ax.set_ylabel(r\"$\\beta$\")\n",
+    "ax.set_title(\"samples\")\n",
     "\n",
     "fig.tight_layout()"
    ]
@@ -434,31 +446,26 @@
    "source": [
     "# plot samples with the data\n",
     "xt = np.linspace(-1, 1)\n",
-    "fs = expit(samp_A[:, None] + samp_B[:, None]*xt)\n",
+    "fs = expit(samp_A[:, None] + samp_B[:, None] * xt)\n",
     "\n",
     "# ceate figure\n",
     "fig, axes = plt.subplots(2, 1, figsize=(7, 8), sharex=True)\n",
     "\n",
     "# plot 10 first samples\n",
     "ax = axes[0]\n",
-    "ax.plot(xt, fs[:10].T, color='C0', alpha=0.5)\n",
-    "ax.scatter(x, y/n, 50, color='C1')\n",
+    "ax.plot(xt, fs[:10].T, color=\"C0\", alpha=0.5)\n",
+    "ax.scatter(x, y / n, 50, color=\"C1\")\n",
     "ax.set_xlim((-1, 1))\n",
-    "ax.set_ylabel('proportion of deaths')\n",
+    "ax.set_ylabel(\"proportion of deaths\")\n",
     "\n",
     "# plot mean and [5% 95%] interval\n",
     "ax = axes[1]\n",
-    "ax.plot(xt, np.mean(fs, axis=0).T, color='C0')\n",
-    "ax.plot(\n",
-    "    xt,\n",
-    "    np.percentile(fs, [5, 95], axis=0).T,\n",
-    "    color='C0',\n",
-    "    linestyle='--'\n",
-    ")\n",
-    "ax.scatter(x, y/n, 50, color='C1')\n",
+    "ax.plot(xt, np.mean(fs, axis=0).T, color=\"C0\")\n",
+    "ax.plot(xt, np.percentile(fs, [5, 95], axis=0).T, color=\"C0\", linestyle=\"--\")\n",
+    "ax.scatter(x, y / n, 50, color=\"C1\")\n",
     "ax.set_xlim((-1, 1))\n",
-    "ax.set_xlabel('log dose')\n",
-    "ax.set_ylabel('proportion of deaths')\n",
+    "ax.set_xlabel(\"log dose\")\n",
+    "ax.set_ylabel(\"proportion of deaths\")\n",
     "\n",
     "fig.tight_layout()"
    ]
@@ -479,7 +486,7 @@
    "source": [
     "# samples of LD50 conditional beta > 0\n",
     "bpi = samp_B > 0\n",
-    "samp_ld50 = -samp_A[bpi]/samp_B[bpi]\n",
+    "samp_ld50 = -samp_A[bpi] / samp_B[bpi]\n",
     "print(f\"{np.mean(bpi):.2f}\")"
    ]
   },
@@ -510,7 +517,7 @@
     "# plot the histogram of LD50\n",
     "plt.hist(samp_ld50, np.arange(-0.5, 0.51, 0.02))\n",
     "plt.xlim([-0.5, 0.5])\n",
-    "plt.xlabel(r'LD50 = -$\\alpha/\\beta$')\n",
+    "plt.xlabel(r\"LD50 = -$\\alpha/\\beta$\")\n",
     "plt.yticks(());"
    ]
   },
