--- a/demos_ch5/demo5_1.ipynb
+++ b/demos_ch5/demo5_1.ipynb
@@ -29,14 +29,15 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
     "import plot_tools\n",
     "\n",
-    "plt.rc('font', size=12)\n",
-    "plt.style.use(plot_tools.custom_styles['gray_background'])"
+    "plt.rc(\"font\", size=12)\n",
+    "plt.style.use(plot_tools.custom_styles[\"gray_background\"])"
    ]
   },
   {
@@ -57,20 +58,156 @@
    },
    "outputs": [],
    "source": [
-    "y = np.array([\n",
-    "     0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  1,  1,\n",
-    "     1,  1,  1,  1,  1,  2,  2,  2,  2,  2,  2,  2,  2,  2,  1,  5,  2,\n",
-    "     5,  3,  2,  7,  7,  3,  3,  2,  9, 10,  4,  4,  4,  4,  4,  4,  4,\n",
-    "    10,  4,  4,  4,  5, 11, 12,  5,  5,  6,  5,  6,  6,  6,  6, 16, 15,\n",
-    "    15,  9,  4\n",
-    "])\n",
-    "n = np.array([\n",
-    "    20, 20, 20, 20, 20, 20, 20, 19, 19, 19, 19, 18, 18, 17, 20, 20, 20,\n",
-    "    20, 19, 19, 18, 18, 25, 24, 23, 20, 20, 20, 20, 20, 20, 10, 49, 19,\n",
-    "    46, 27, 17, 49, 47, 20, 20, 13, 48, 50, 20, 20, 20, 20, 20, 20, 20,\n",
-    "    48, 19, 19, 19, 22, 46, 49, 20, 20, 23, 19, 22, 20, 20, 20, 52, 46,\n",
-    "    47, 24, 14\n",
-    "])\n",
+    "y = np.array(\n",
+    "    [\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        0,\n",
+    "        1,\n",
+    "        1,\n",
+    "        1,\n",
+    "        1,\n",
+    "        1,\n",
+    "        1,\n",
+    "        1,\n",
+    "        1,\n",
+    "        2,\n",
+    "        2,\n",
+    "        2,\n",
+    "        2,\n",
+    "        2,\n",
+    "        2,\n",
+    "        2,\n",
+    "        2,\n",
+    "        2,\n",
+    "        1,\n",
+    "        5,\n",
+    "        2,\n",
+    "        5,\n",
+    "        3,\n",
+    "        2,\n",
+    "        7,\n",
+    "        7,\n",
+    "        3,\n",
+    "        3,\n",
+    "        2,\n",
+    "        9,\n",
+    "        10,\n",
+    "        4,\n",
+    "        4,\n",
+    "        4,\n",
+    "        4,\n",
+    "        4,\n",
+    "        4,\n",
+    "        4,\n",
+    "        10,\n",
+    "        4,\n",
+    "        4,\n",
+    "        4,\n",
+    "        5,\n",
+    "        11,\n",
+    "        12,\n",
+    "        5,\n",
+    "        5,\n",
+    "        6,\n",
+    "        5,\n",
+    "        6,\n",
+    "        6,\n",
+    "        6,\n",
+    "        6,\n",
+    "        16,\n",
+    "        15,\n",
+    "        15,\n",
+    "        9,\n",
+    "        4,\n",
+    "    ]\n",
+    ")\n",
+    "n = np.array(\n",
+    "    [\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        19,\n",
+    "        19,\n",
+    "        19,\n",
+    "        19,\n",
+    "        18,\n",
+    "        18,\n",
+    "        17,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        19,\n",
+    "        19,\n",
+    "        18,\n",
+    "        18,\n",
+    "        25,\n",
+    "        24,\n",
+    "        23,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        10,\n",
+    "        49,\n",
+    "        19,\n",
+    "        46,\n",
+    "        27,\n",
+    "        17,\n",
+    "        49,\n",
+    "        47,\n",
+    "        20,\n",
+    "        20,\n",
+    "        13,\n",
+    "        48,\n",
+    "        50,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        48,\n",
+    "        19,\n",
+    "        19,\n",
+    "        19,\n",
+    "        22,\n",
+    "        46,\n",
+    "        49,\n",
+    "        20,\n",
+    "        20,\n",
+    "        23,\n",
+    "        19,\n",
+    "        22,\n",
+    "        20,\n",
+    "        20,\n",
+    "        20,\n",
+    "        52,\n",
+    "        46,\n",
+    "        47,\n",
+    "        24,\n",
+    "        14,\n",
+    "    ]\n",
+    ")\n",
     "M = len(y)"
    ]
   },
@@ -135,21 +272,20 @@
     "ax = axes[0]\n",
     "lines = ax.plot(\n",
     "    x,\n",
-    "    beta.pdf(x[:,None], y[:-1] + 1, n[:-1] - y[:-1] + 1),\n",
-    "    color='C0',\n",
-    "    linewidth=0.5\n",
+    "    beta.pdf(x[:, None], y[:-1] + 1, n[:-1] - y[:-1] + 1),\n",
+    "    color=\"C0\",\n",
+    "    linewidth=0.5,\n",
     ")\n",
     "# highlight the last line\n",
     "lines[-1].set_linewidth(2)\n",
-    "lines[-1].set_color('r')\n",
+    "lines[-1].set_color(\"r\")\n",
     "ax.legend(\n",
     "    (lines[0], lines[-1]),\n",
-    "    (r'Posterior of $\\theta_j$',\n",
-    "     r'Posterior of $\\theta_{71}$')\n",
+    "    (r\"Posterior of $\\theta_j$\", r\"Posterior of $\\theta_{71}$\"),\n",
     ")\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))  # set y base to zero\n",
     "ax.set_yticks(())\n",
-    "ax.set_title('Separate model')\n",
+    "ax.set_title(\"Separate model\")\n",
     "\n",
     "# pooled (why using last experiment? mistake?)\n",
     "ax = axes[1]\n",
@@ -157,13 +293,13 @@
     "    x,\n",
     "    beta.pdf(x, y.sum() + 1, n.sum() - y.sum() + 1),\n",
     "    linewidth=2,\n",
-    "    label=(r'Posterior of common $\\theta$')\n",
+    "    label=(r\"Posterior of common $\\theta$\"),\n",
     ")\n",
     "ax.legend()\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))  # set y base to zero\n",
     "ax.set_yticks(())\n",
-    "ax.set_xlabel(r'$\\theta$')\n",
-    "ax.set_title('Pooled model')\n",
+    "ax.set_xlabel(r\"$\\theta$\")\n",
+    "ax.set_title(\"Pooled model\")\n",
     "\n",
     "fig.tight_layout()"
    ]
@@ -195,17 +331,14 @@
     "A = np.linspace(0.5, 6, 100)\n",
     "B = np.linspace(3, 33, 100)\n",
     "\n",
-    "lp = (\n",
-    "  - 5/2 * np.log(A + B[:, None])\n",
-    "  + np.sum(\n",
-    "        gammaln(A + B[:, None])\n",
-    "      - gammaln(A)\n",
-    "      - gammaln(B[:, None])\n",
-    "      + gammaln(A + y[:, None, None])\n",
-    "      + gammaln(B[:, None] + (n - y)[:, None, None])\n",
-    "      - gammaln(A + B[:, None] + n[:, None, None]),\n",
-    "        axis=0\n",
-    "    )\n",
+    "lp = -5 / 2 * np.log(A + B[:, None]) + np.sum(\n",
+    "    gammaln(A + B[:, None])\n",
+    "    - gammaln(A)\n",
+    "    - gammaln(B[:, None])\n",
+    "    + gammaln(A + y[:, None, None])\n",
+    "    + gammaln(B[:, None] + (n - y)[:, None, None])\n",
+    "    - gammaln(A + B[:, None] + n[:, None, None]),\n",
+    "    axis=0,\n",
     ")\n",
     "\n",
     "# subtract the maximum value to avoid over/underflow in exponentation\n",
@@ -237,16 +370,11 @@
     }
    ],
    "source": [
-    "plt.imshow(\n",
-    "    p,\n",
-    "    origin='lower',\n",
-    "    aspect='auto',\n",
-    "    extent=(A[0], A[-1], B[0], B[-1])\n",
-    ")\n",
-    "plt.xlabel(r'$\\alpha$')\n",
-    "plt.ylabel(r'$\\beta$')\n",
-    "plt.title('The marginal posterior of alpha and beta in hierarchical model')\n",
-    "plt.grid('off')"
+    "plt.imshow(p, origin=\"lower\", aspect=\"auto\", extent=(A[0], A[-1], B[0], B[-1]))\n",
+    "plt.xlabel(r\"$\\alpha$\")\n",
+    "plt.ylabel(r\"$\\beta$\")\n",
+    "plt.title(\"The marginal posterior of alpha and beta in hierarchical model\")\n",
+    "plt.grid(\"off\")"
    ]
   },
   {
@@ -278,14 +406,13 @@
    "source": [
     "nsamp = 1000\n",
     "samp_indices = np.unravel_index(\n",
-    "    np.random.choice(p.size, size=nsamp, p=p.ravel()/p.sum()),\n",
-    "    p.shape\n",
+    "    np.random.choice(p.size, size=nsamp, p=p.ravel() / p.sum()), p.shape\n",
     ")\n",
     "samp_A = A[samp_indices[1]]\n",
     "samp_B = B[samp_indices[0]]\n",
     "# add random jitter, see BDA3 p. 76\n",
-    "samp_A += (np.random.rand(nsamp) - 0.5) * (A[1]-A[0])\n",
-    "samp_B += (np.random.rand(nsamp) - 0.5) * (B[1]-B[0])"
+    "samp_A += (np.random.rand(nsamp) - 0.5) * (A[1] - A[0])\n",
+    "samp_B += (np.random.rand(nsamp) - 0.5) * (B[1] - B[0])"
    ]
   },
   {
@@ -317,24 +444,24 @@
     "ax = axes[0]\n",
     "ax.plot(\n",
     "    x,\n",
-    "    beta.pdf(x[:,None], samp_A[:20], samp_B[:20]),\n",
+    "    beta.pdf(x[:, None], samp_A[:20], samp_B[:20]),\n",
     "    linewidth=0.5,\n",
-    "    color='C0'\n",
+    "    color=\"C0\",\n",
     ")\n",
     "ax.set_yticks(())\n",
     "ax.set_title(\n",
-    "    r'Posterior samples from the distribution of distributions '\n",
-    "    r'Beta($\\alpha$,$\\beta$)'\n",
+    "    r\"Posterior samples from the distribution of distributions \"\n",
+    "    r\"Beta($\\alpha$,$\\beta$)\"\n",
     ")\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))  # set y base to zero\n",
     "\n",
     "ax = axes[1]\n",
-    "plt.plot(x, np.mean(beta.pdf(x, samp_A[:,None], samp_B[:,None]), axis=0))\n",
+    "plt.plot(x, np.mean(beta.pdf(x, samp_A[:, None], samp_B[:, None]), axis=0))\n",
     "ax.set_yticks(())\n",
-    "ax.set_xlabel(r'$\\theta$')\n",
+    "ax.set_xlabel(r\"$\\theta$\")\n",
     "ax.set_title(\n",
-    "    r'Posterior predictive distribution for a new $\\theta$ '\n",
-    "    r'and prior for $\\theta_j$'\n",
+    "    r\"Posterior predictive distribution for a new $\\theta$ \"\n",
+    "    r\"and prior for $\\theta_j$\"\n",
     ")\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))  # set y base to zero\n",
     "\n",
@@ -372,9 +499,9 @@
    ],
    "source": [
     "beta.pdf(\n",
-    "        x[:, None],\n",
-    "        y[7::7] + samp_A[:,None,None],\n",
-    "        n[7::7] - y[7::7] + samp_B[:,None,None]\n",
+    "    x[:, None],\n",
+    "    y[7::7] + samp_A[:, None, None],\n",
+    "    n[7::7] - y[7::7] + samp_B[:, None, None],\n",
     ").shape"
    ]
   },
@@ -420,15 +547,15 @@
     "# note that for clarity only every 7th distribution is plotted\n",
     "lines = ax.plot(\n",
     "    x,\n",
-    "    beta.pdf(x[:,None], y[7:-1:7] + 1, n[7:-1:7] - y[7:-1:7] + 1),\n",
-    "    color='C0',\n",
-    "    linewidth=1\n",
+    "    beta.pdf(x[:, None], y[7:-1:7] + 1, n[7:-1:7] - y[7:-1:7] + 1),\n",
+    "    color=\"C0\",\n",
+    "    linewidth=1,\n",
     ")\n",
     "# highlight the last line\n",
     "lines[-1].set_linewidth(2)\n",
-    "lines[-1].set_color('r')\n",
+    "lines[-1].set_color(\"r\")\n",
     "ax.set_yticks(())\n",
-    "ax.set_title('separate model')\n",
+    "ax.set_title(\"separate model\")\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))  # set y base to zero\n",
     "\n",
     "ax = axes[1]\n",
@@ -438,22 +565,22 @@
     "    np.mean(\n",
     "        beta.pdf(\n",
     "            x[:, None],\n",
-    "#             y[7::7] + samp_A[:,None,None],\n",
-    "#             n[7::7] - y[7::7] + samp_B[:,None,None]\n",
+    "            #             y[7::7] + samp_A[:,None,None],\n",
+    "            #             n[7::7] - y[7::7] + samp_B[:,None,None]\n",
     "            y[7:-1:7] + samp_A[:, None, None],\n",
-    "            n[7:-1:7] - y[7:-1:7] + samp_B[:, None, None]\n",
+    "            n[7:-1:7] - y[7:-1:7] + samp_B[:, None, None],\n",
     "        ),\n",
-    "        axis=0\n",
+    "        axis=0,\n",
     "    ),\n",
-    "    color='C0',\n",
+    "    color=\"C0\",\n",
     "    linewidth=1,\n",
     ")\n",
     "# highlight the last line\n",
     "lines[-1].set_linewidth(2)\n",
-    "lines[-1].set_color('r')\n",
+    "lines[-1].set_color(\"r\")\n",
     "ax.set_yticks(())\n",
-    "ax.set_xlabel(r'$\\theta$')\n",
-    "ax.set_title('hierarchical model')\n",
+    "ax.set_xlabel(r\"$\\theta$\")\n",
+    "ax.set_title(\"hierarchical model\")\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))  # set y base to zero\n",
     "\n",
     "fig.tight_layout()"
