--- a/demos_ch5/demo5_2.ipynb
+++ b/demos_ch5/demo5_2.ipynb
@@ -43,14 +43,15 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
     "import plot_tools\n",
     "\n",
-    "plt.rc('font', size=12)\n",
-    "plt.style.use(plot_tools.custom_styles['gray_background'])"
+    "plt.rc(\"font\", size=12)\n",
+    "plt.style.use(plot_tools.custom_styles[\"gray_background\"])"
    ]
   },
   {
@@ -89,8 +90,8 @@
     "# SAT-example data (BDA3 p. 120)\n",
     "# y is the estimated treatment effect\n",
     "# s is the standard error of effect estimate (here, sigma)\n",
-    "y = np.array([28,  8, -3,  7, -1,  1, 18, 12])\n",
-    "s = np.array([15, 10, 16, 11,  9, 11, 10, 18])\n",
+    "y = np.array([28, 8, -3, 7, -1, 1, 18, 12])\n",
+    "s = np.array([15, 10, 16, 11, 9, 11, 10, 18])\n",
     "M = len(y)"
    ]
   },
@@ -115,14 +116,10 @@
     "# load the pre-computed results for the hierarchical model\n",
     "# replace this with your own code in Ex 5.1*\n",
     "hres_path = os.path.abspath(\n",
-    "    os.path.join(\n",
-    "        os.path.pardir,\n",
-    "        'utilities_and_data',\n",
-    "        'demo5_2.npz'\n",
-    "    )\n",
+    "    os.path.join(os.path.pardir, \"utilities_and_data\", \"demo5_2.npz\")\n",
     ")\n",
     "hres = np.load(hres_path)\n",
-    "''' Content information of the pre-calculated results:\n",
+    "\"\"\" Content information of the pre-calculated results:\n",
     "name  shape      dtype\n",
     "------------------------\n",
     "pxm   (8, 500)   float64  # posterior for marginal effects (theta)\n",
@@ -130,12 +127,12 @@
     "tp    (1000,)    float64  # marginal posterior density for tau\n",
     "tsd   (8, 1000)  float64  # standard deviation of effects, (one for each theta)\n",
     "tm    (8, 1000)  float64  # conditional posterior means of effects, (one for each theta)\n",
-    "'''\n",
-    "pxm = hres['pxm']\n",
-    "t   = hres['t']\n",
-    "tp  = hres['tp']\n",
-    "tsd = hres['tsd']\n",
-    "tm  = hres['tm']\n",
+    "\"\"\"\n",
+    "pxm = hres[\"pxm\"]\n",
+    "t = hres[\"t\"]\n",
+    "tp = hres[\"tp\"]\n",
+    "tsd = hres[\"tsd\"]\n",
+    "tm = hres[\"tm\"]\n",
     "hres.close()"
    ]
   },
@@ -169,20 +166,11 @@
     "\n",
     "# separate\n",
     "ax = axes[0]\n",
-    "lines = ax.plot(\n",
-    "    x,\n",
-    "    norm.pdf(x[:,None], y[1:], s[1:]),\n",
-    "    color='C0',\n",
-    "    linewidth=1\n",
-    ")\n",
-    "line, = ax.plot(x, norm.pdf(x, y[0], s[0]), color='red')\n",
-    "ax.legend(\n",
-    "    (line, lines[0]),\n",
-    "    ('school A', 'other schools'),\n",
-    "    loc='upper left'\n",
-    ")\n",
+    "lines = ax.plot(x, norm.pdf(x[:, None], y[1:], s[1:]), color=\"C0\", linewidth=1)\n",
+    "(line,) = ax.plot(x, norm.pdf(x, y[0], s[0]), color=\"red\")\n",
+    "ax.legend((line, lines[0]), (\"school A\", \"other schools\"), loc=\"upper left\")\n",
     "ax.set_yticks(())\n",
-    "ax.set_title('separate model')\n",
+    "ax.set_title(\"separate model\")\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))  # set y base to zero\n",
     "\n",
     "# pooled\n",
@@ -191,28 +179,24 @@
     "    x,\n",
     "    norm.pdf(\n",
     "        x,\n",
-    "        np.sum(y/s**2)/np.sum(1/s**2),\n",
-    "        np.sqrt(1/np.sum(1/s**2))\n",
+    "        np.sum(y / s ** 2) / np.sum(1 / s ** 2),\n",
+    "        np.sqrt(1 / np.sum(1 / s ** 2)),\n",
     "    ),\n",
-    "    label='All schools'\n",
+    "    label=\"All schools\",\n",
     ")\n",
-    "ax.legend(loc='upper left')\n",
+    "ax.legend(loc=\"upper left\")\n",
     "ax.set_yticks(())\n",
-    "ax.set_title('pooled model')\n",
+    "ax.set_title(\"pooled model\")\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))  # set y base to zero\n",
     "\n",
     "# hierarchical\n",
     "ax = axes[2]\n",
-    "lines = ax.plot(x, pxm[1:].T, color='C0',linewidth=1)\n",
-    "line, = ax.plot(x, pxm[0], color='red')\n",
-    "ax.legend(\n",
-    "    (line, lines[0]),\n",
-    "    ('school A', 'other schools'),\n",
-    "    loc='upper left'\n",
-    ")\n",
+    "lines = ax.plot(x, pxm[1:].T, color=\"C0\", linewidth=1)\n",
+    "(line,) = ax.plot(x, pxm[0], color=\"red\")\n",
+    "ax.legend((line, lines[0]), (\"school A\", \"other schools\"), loc=\"upper left\")\n",
     "ax.set_yticks(())\n",
-    "ax.set_title('hierarchical model')\n",
-    "ax.set_xlabel('Treatment effect')\n",
+    "ax.set_title(\"hierarchical model\")\n",
+    "ax.set_xlabel(\"Treatment effect\")\n",
     "ax.set_ylim((0, ax.set_ylim()[1]))  # set y base to zero\n",
     "\n",
     "fig.tight_layout()"
@@ -243,37 +227,36 @@
    ],
    "source": [
     "# plot various marginal and conditional posterior summaries\n",
-    "fig, axes = plt.subplots(3, 1, sharex=True, figsize=(8,10))\n",
+    "fig, axes = plt.subplots(3, 1, sharex=True, figsize=(8, 10))\n",
     "\n",
     "axes[0].plot(t, tp)\n",
     "axes[0].set_yticks(())\n",
-    "axes[0].set_title(r'marginal posterior density $p(\\tau|y)$')\n",
-    "axes[0].set_ylabel(r'$p(\\tau|y)$')\n",
+    "axes[0].set_title(r\"marginal posterior density $p(\\tau|y)$\")\n",
+    "axes[0].set_ylabel(r\"$p(\\tau|y)$\")\n",
     "axes[0].set_xlim([0, 35])\n",
     "axes[0].set_ylim([0, axes[0].set_ylim()[1]])\n",
     "\n",
-    "lines = axes[1].plot(t, tm[1:].T, color='C0', linewidth=1)\n",
-    "line, = axes[1].plot(t, tm[0].T, color='red')\n",
+    "lines = axes[1].plot(t, tm[1:].T, color=\"C0\", linewidth=1)\n",
+    "(line,) = axes[1].plot(t, tm[0].T, color=\"red\")\n",
     "axes[1].legend(\n",
-    "    (line, lines[1]),\n",
-    "    ('school A', 'other schools'),\n",
-    "    loc='upper left'\n",
+    "    (line, lines[1]), (\"school A\", \"other schools\"), loc=\"upper left\"\n",
     ")\n",
-    "axes[1].set_title(r'conditional posterior means of effects '\n",
-    "                  r'$\\operatorname{E}(\\theta_j|\\tau,y)$')\n",
-    "axes[1].set_ylabel(r'$\\operatorname{E}(\\theta_j|\\tau,y)$')\n",
+    "axes[1].set_title(\n",
+    "    r\"conditional posterior means of effects \"\n",
+    "    r\"$\\operatorname{E}(\\theta_j|\\tau,y)$\"\n",
+    ")\n",
+    "axes[1].set_ylabel(r\"$\\operatorname{E}(\\theta_j|\\tau,y)$\")\n",
     "\n",
-    "lines = axes[2].plot(t, tsd[1:].T, color='C0', linewidth=1)\n",
-    "line, = axes[2].plot(t, tsd[0].T, color='red')\n",
+    "lines = axes[2].plot(t, tsd[1:].T, color=\"C0\", linewidth=1)\n",
+    "(line,) = axes[2].plot(t, tsd[0].T, color=\"red\")\n",
     "axes[2].legend(\n",
-    "    (line, lines[1]),\n",
-    "    ('school A', 'other schools'),\n",
-    "    loc='upper left'\n",
+    "    (line, lines[1]), (\"school A\", \"other schools\"), loc=\"upper left\"\n",
     ")\n",
-    "axes[2].set_title(r'standard deviations of effects '\n",
-    "                  r'$\\operatorname{sd}(\\theta_j|\\tau,y)$')\n",
-    "axes[2].set_ylabel(r'$\\operatorname{sd}(\\theta_j|\\tau,y)$')\n",
-    "axes[2].set_xlabel(r'$\\tau$')\n",
+    "axes[2].set_title(\n",
+    "    r\"standard deviations of effects \" r\"$\\operatorname{sd}(\\theta_j|\\tau,y)$\"\n",
+    ")\n",
+    "axes[2].set_ylabel(r\"$\\operatorname{sd}(\\theta_j|\\tau,y)$\")\n",
+    "axes[2].set_xlabel(r\"$\\tau$\")\n",
     "\n",
     "fig.tight_layout()"
    ]
