--- a/demos_ch6/demo6_1.ipynb
+++ b/demos_ch6/demo6_1.ipynb
@@ -18,13 +18,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
     "import plot_tools\n",
     "\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -65,11 +66,7 @@
    "outputs": [],
    "source": [
     "data_path = os.path.abspath(\n",
-    "    os.path.join(\n",
-    "        os.path.pardir,\n",
-    "        'utilities_and_data',\n",
-    "        'light.txt'\n",
-    "    )\n",
+    "    os.path.join(os.path.pardir, \"utilities_and_data\", \"light.txt\")\n",
     ")\n",
     "y = np.loadtxt(data_path)"
    ]
@@ -163,7 +160,9 @@
    },
    "outputs": [],
    "source": [
-    "replicates = np.random.standard_t(n-1, size=(9,n)) * np.sqrt(1+1/n)*s + my"
+    "replicates = (\n",
+    "    np.random.standard_t(n - 1, size=(9, n)) * np.sqrt(1 + 1 / n) * s + my\n",
+    ")"
    ]
   },
   {
@@ -201,10 +200,7 @@
     "fig.subplots_adjust(top=0.95, wspace=0.4)\n",
     "order = np.random.permutation(10)\n",
     "for i, ax in enumerate(axes.flat):\n",
-    "    ax.hist(\n",
-    "        replicates[order[i]] if order[i] < 9 else y,\n",
-    "        np.arange(-45, 55, 5)\n",
-    "    )\n",
+    "    ax.hist(replicates[order[i]] if order[i] < 9 else y, np.arange(-45, 55, 5))\n",
     "    plot_tools.modify_axes.only_x(ax)\n",
     "axes[0, 0].set_xlim([-50, 58])\n",
     "fig.suptitle(\n",
@@ -237,9 +233,9 @@
    "outputs": [],
    "source": [
     "x = np.linspace(-60, 20, 150)\n",
-    "pdf = stats.t.pdf(x, df=n-1, loc=my, scale=np.sqrt(s2*(1+1/n)))\n",
-    "cdf = stats.t.cdf(x, df=n-1, loc=my, scale=np.sqrt(s2*(1+1/n)))\n",
-    "pdf_min = n * pdf * (1 - cdf)**(n-1)"
+    "pdf = stats.t.pdf(x, df=n - 1, loc=my, scale=np.sqrt(s2 * (1 + 1 / n)))\n",
+    "cdf = stats.t.cdf(x, df=n - 1, loc=my, scale=np.sqrt(s2 * (1 + 1 / n)))\n",
+    "pdf_min = n * pdf * (1 - cdf) ** (n - 1)"
    ]
   },
   {
@@ -276,18 +272,13 @@
     "plt.figure()\n",
     "plot_tools.modify_axes.only_x(plt.gca())\n",
     "plt.plot(\n",
-    "    x,\n",
-    "    pdf_min,\n",
-    "    label='distribution of the minimum of a replicated data set'\n",
+    "    x, pdf_min, label=\"distribution of the minimum of a replicated data set\"\n",
     ")\n",
     "plt.ylim([0, plt.ylim()[1]])  # set y base to zero\n",
     "plt.axvline(\n",
-    "    y.min(),\n",
-    "    color='k',\n",
-    "    linestyle='--',\n",
-    "    label='minimum of the true data set'\n",
+    "    y.min(), color=\"k\", linestyle=\"--\", label=\"minimum of the true data set\"\n",
     ")\n",
-    "plt.legend(loc='lower center', bbox_to_anchor=(0.5, 1.05));"
+    "plt.legend(loc=\"lower center\", bbox_to_anchor=(0.5, 1.05));"
    ]
   },
   {
