--- a/demos_ch6/demo6_2.ipynb
+++ b/demos_ch6/demo6_2.ipynb
@@ -17,13 +17,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
     "import plot_tools\n",
     "\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -126,7 +127,7 @@
    "source": [
     "np.random.seed(42)\n",
     "nsamp = 10_000\n",
-    "posterior_draws = np.random.beta(s+1, n-s+1, size=nsamp)\n",
+    "posterior_draws = np.random.beta(s + 1, n - s + 1, size=nsamp)\n",
     "y_replicates = np.random.rand(n, nsamp) < posterior_draws\n",
     "# y_replicates = np.random.binomial(1, t, size=(n, nsamp)) # could also do this\n",
     "Tyr = (np.diff(y_replicates, axis=0) != 0).sum(axis=0)\n",
@@ -160,16 +161,17 @@
     "plt.hist(\n",
     "    Tyr,\n",
     "    np.arange(19),\n",
-    "    align='left',\n",
-    "    label='$T(y_\\mathrm{rep})$',\n",
-    "    color=plot_tools.lighten('C0', 0.3),\n",
+    "    align=\"left\",\n",
+    "    label=\"$T(y_\\mathrm{rep})$\",\n",
+    "    color=plot_tools.lighten(\"C0\", 0.3),\n",
     ")\n",
-    "plt.axvline(Ty, color='red', label='$T(y)$')\n",
+    "plt.axvline(Ty, color=\"red\", label=\"$T(y)$\")\n",
     "plt.xlim((-0.5, 17.5))\n",
     "plt.title(\n",
-    "    'Binomial example - number of changes? \\n'\n",
-    "    r'$\\operatorname{Pr}(T(y_\\mathrm{rep},\\theta) \\leq T(y,\\theta)|y) = $' + f\" {100*bayesian_p:.2f}%\",\n",
-    "    fontsize=16\n",
+    "    \"Binomial example - number of changes? \\n\"\n",
+    "    r\"$\\operatorname{Pr}(T(y_\\mathrm{rep},\\theta) \\leq T(y,\\theta)|y) = $\"\n",
+    "    + f\" {100*bayesian_p:.2f}%\",\n",
+    "    fontsize=16,\n",
     ")\n",
     "plt.legend()\n",
     "plot_tools.modify_axes.only_x(plt.gca())\n",
