--- a/demos_ch6/demo6_3.ipynb
+++ b/demos_ch6/demo6_3.ipynb
@@ -18,13 +18,14 @@
     "from scipy import stats\n",
     "\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
     "import plot_tools\n",
     "\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -58,11 +59,7 @@
    "outputs": [],
    "source": [
     "data_path = os.path.abspath(\n",
-    "    os.path.join(\n",
-    "        os.path.pardir,\n",
-    "        'utilities_and_data',\n",
-    "        'light.txt'\n",
-    "    )\n",
+    "    os.path.join(os.path.pardir, \"utilities_and_data\", \"light.txt\")\n",
     ")\n",
     "y = np.loadtxt(data_path)\n",
     "\n",
@@ -100,7 +97,7 @@
    "outputs": [],
    "source": [
     "nsamp = 1000\n",
-    "pps = rng.standard_t(n-1, size=(n, nsamp))*np.sqrt(s2*(1+1/n)) + my\n",
+    "pps = rng.standard_t(n - 1, size=(n, nsamp)) * np.sqrt(s2 * (1 + 1 / n)) + my\n",
     "pp = np.var(pps, axis=0, ddof=1)"
    ]
   },
@@ -131,16 +128,16 @@
     "plt.hist(\n",
     "    pp,\n",
     "    20,\n",
-    "    label='Variances of the replicated data sets',\n",
-    "    color=plot_tools.lighten('C0', 0.3)\n",
+    "    label=\"Variances of the replicated data sets\",\n",
+    "    color=plot_tools.lighten(\"C0\", 0.3),\n",
     ")\n",
-    "plt.axvline(s2, color='red', label='Variance of the original data')\n",
+    "plt.axvline(s2, color=\"red\", label=\"Variance of the original data\")\n",
     "plt.title(\n",
-    "    'Light speed example with poorly chosen test statistic\\n'\n",
-    "    r'$\\operatorname{Pr}(T(y_\\mathrm{rep},\\theta)\\leq T(y,\\theta)|y)=0.42$',\n",
-    "    fontsize=16\n",
+    "    \"Light speed example with poorly chosen test statistic\\n\"\n",
+    "    r\"$\\operatorname{Pr}(T(y_\\mathrm{rep},\\theta)\\leq T(y,\\theta)|y)=0.42$\",\n",
+    "    fontsize=16,\n",
     ")\n",
-    "plt.legend(loc='center left', bbox_to_anchor=(0.7, 0.8))\n",
+    "plt.legend(loc=\"center left\", bbox_to_anchor=(0.7, 0.8))\n",
     "plot_tools.modify_axes.only_x(plt.gca())\n",
     "plt.tight_layout()"
    ]
@@ -203,7 +200,10 @@
     "replicates = rng.normal(\n",
     "    mu_post[:, None], np.sqrt(sigma2[:, None]), size=(num_replicates, n)\n",
     ")\n",
-    "replicates1 = rng.standard_t(n-1, size=(num_replicates, n))*np.sqrt(s2*(1+1/n)) + my\n",
+    "replicates1 = (\n",
+    "    rng.standard_t(n - 1, size=(num_replicates, n)) * np.sqrt(s2 * (1 + 1 / n))\n",
+    "    + my\n",
+    ")\n",
     "\n",
     "replicates_sorted = np.sort(replicates)\n",
     "replicates_6 = replicates_sorted[:, 5]\n",
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "plt.hist(replicates.reshape(-1), bins=25, alpha=0.25, color=\"blue\");\n",
+    "plt.hist(replicates.reshape(-1), bins=25, alpha=0.25, color=\"blue\")\n",
     "plt.hist(replicates1.reshape(-1), bins=25, alpha=0.25, color=\"red\");"
    ]
   },
@@ -261,12 +261,12 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "ax.scatter(Ty, Tyr, alpha=0.5);\n",
-    "ax.set_xlim(-15, 15);\n",
-    "ax.set_ylim(-15, 15);\n",
-    "ax.plot([-15, 15], [-15, 15], color=\"red\");\n",
-    "ax.set_xlabel(\"$T_y$\");\n",
-    "ax.set_ylabel(\"$T_{yr}$\");\n",
+    "ax.scatter(Ty, Tyr, alpha=0.5)\n",
+    "ax.set_xlim(-15, 15)\n",
+    "ax.set_ylim(-15, 15)\n",
+    "ax.plot([-15, 15], [-15, 15], color=\"red\")\n",
+    "ax.set_xlabel(\"$T_y$\")\n",
+    "ax.set_ylabel(\"$T_{yr}$\")\n",
     "plt.title(f\"{np.mean(Tyr > Ty):.2f}\");"
    ]
   },
