--- a/demos_ch6/demo6_4.ipynb
+++ b/demos_ch6/demo6_4.ipynb
@@ -19,13 +19,13 @@
     "\n",
     "import os, sys\n",
     "\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
     "import plot_tools\n",
     "\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -50,11 +50,7 @@
    "outputs": [],
    "source": [
     "data_path = os.path.abspath(\n",
-    "    os.path.join(\n",
-    "        os.path.pardir,\n",
-    "        'utilities_and_data',\n",
-    "        'light.txt'\n",
-    "    )\n",
+    "    os.path.join(os.path.pardir, \"utilities_and_data\", \"light.txt\")\n",
     ")\n",
     "y = np.loadtxt(data_path)\n",
     "\n",
@@ -86,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#y = stats.t.rvs(df=n-1, loc=my, scale=np.sqrt(s2*(1+1/n)), size=10000)"
+    "# y = stats.t.rvs(df=n-1, loc=my, scale=np.sqrt(s2*(1+1/n)), size=10000)"
    ]
   },
   {
@@ -100,7 +96,7 @@
    },
    "outputs": [],
    "source": [
-    "Ty = stats.t.cdf(y, n-1, loc=my, scale=np.sqrt(s2*(1+1/n)))"
+    "Ty = stats.t.cdf(y, n - 1, loc=my, scale=np.sqrt(s2 * (1 + 1 / n)))"
    ]
   },
   {
@@ -129,7 +125,7 @@
    "source": [
     "plt.hist(Ty, np.arange(0, 1.01, 0.05))\n",
     "plt.xlim((0, 1))\n",
-    "plt.title('Light speed example\\ndistribution of marginal posterior p-values')\n",
+    "plt.title(\"Light speed example\\ndistribution of marginal posterior p-values\")\n",
     "plot_tools.modify_axes.only_x(plt.gca())"
    ]
   },
