--- a/demos_ch9/demo9_1.ipynb
+++ b/demos_ch9/demo9_1.ipynb
@@ -19,13 +19,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
     "import plot_tools\n",
     "\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -55,7 +56,7 @@
     "m = 160\n",
     "s = 40\n",
     "\n",
-    "x = np.arange(m-3*s, m+3*s+1)\n",
+    "x = np.arange(m - 3 * s, m + 3 * s + 1)\n",
     "px = stats.norm.pdf(x, loc=m, scale=s)\n",
     "xpx = x * px"
    ]
@@ -94,15 +95,15 @@
     "plt.plot(x, px)\n",
     "plot_tools.modify_axes.only_x(plt.gca())\n",
     "plt.xlim([x[0], x[-1]])\n",
-    "plt.ylabel('probability')\n",
-    "plt.xlabel('number of coins')\n",
+    "plt.ylabel(\"probability\")\n",
+    "plt.xlabel(\"number of coins\")\n",
     "\n",
-    "h2, = plt.plot([m, m], [0, stats.norm.pdf(m, loc=m, scale=s)])\n",
+    "(h2,) = plt.plot([m, m], [0, stats.norm.pdf(m, loc=m, scale=s)])\n",
     "plt.legend(\n",
     "    (h2,),\n",
-    "    ('most probable value = {}'.format(m),),\n",
-    "    loc='lower center',\n",
-    "    bbox_to_anchor=(0.5, 1.02)\n",
+    "    (\"most probable value = {}\".format(m),),\n",
+    "    loc=\"lower center\",\n",
+    "    bbox_to_anchor=(0.5, 1.02),\n",
     ");"
    ]
   },
@@ -132,11 +133,11 @@
     }
    ],
    "source": [
-    "plt.style.use(plot_tools.custom_styles['gray_background'])\n",
+    "plt.style.use(plot_tools.custom_styles[\"gray_background\"])\n",
     "\n",
     "plt.plot(x, x)\n",
-    "plt.ylabel('utility if guess is correct')\n",
-    "plt.xlabel('guess')\n",
+    "plt.ylabel(\"utility if guess is correct\")\n",
+    "plt.xlabel(\"guess\")\n",
     "plt.xlim([x[0], x[-1]])\n",
     "plt.ylim([x[0], x[-1]]);"
    ]
@@ -173,8 +174,8 @@
    ],
    "source": [
     "plt.plot(x, xpx)\n",
-    "plt.ylabel('expected utility')\n",
-    "plt.xlabel('guess')\n",
+    "plt.ylabel(\"expected utility\")\n",
+    "plt.xlabel(\"guess\")\n",
     "plt.ylim([0, plt.ylim()[1]])\n",
     "plt.xlim([x[0], x[-1]])\n",
     "\n",
@@ -182,12 +183,12 @@
     "mi = np.argmax(xpx)\n",
     "meu = xpx[mi]\n",
     "meux = x[mi]\n",
-    "h3, = plt.plot([meux, meux], [0, meu])\n",
+    "(h3,) = plt.plot([meux, meux], [0, meu])\n",
     "plt.legend(\n",
     "    (h3,),\n",
-    "    ('guess which maximises the expected utility = {}'.format(meux),),\n",
-    "    loc='lower center',\n",
-    "    bbox_to_anchor=(0.5, 1.02)\n",
+    "    (\"guess which maximises the expected utility = {}\".format(meux),),\n",
+    "    loc=\"lower center\",\n",
+    "    bbox_to_anchor=(0.5, 1.02),\n",
     ");"
    ]
   },
