--- a/demos_pystan/PyStan_test_installation.ipynb
+++ b/demos_pystan/PyStan_test_installation.ipynb
@@ -26,6 +26,7 @@
    "outputs": [],
    "source": [
     "import pystan\n",
+    "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -51,7 +52,9 @@
     }
    ],
    "source": [
-    "fit = pystan.stan(model_code=\"parameters {real theta;} model {theta ~ normal(0,1);}\")"
+    "fit = pystan.stan(\n",
+    "    model_code=\"parameters {real theta;} model {theta ~ normal(0,1);}\"\n",
+    ")"
    ]
   },
   {
@@ -79,7 +82,7 @@
    ],
    "source": [
     "samples = fit.extract(permuted=True)\n",
-    "plt.hist(samples['theta'], 50);"
+    "plt.hist(samples[\"theta\"], 50);"
    ]
   }
  ],
