--- a/demos_pystan/diabetes.ipynb
+++ b/demos_pystan/diabetes.ipynb
@@ -102,7 +102,8 @@
    "source": [
     "# add utilities directory to path\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -153,11 +154,7 @@
    "source": [
     "# load data\n",
     "data_path = os.path.abspath(\n",
-    "    os.path.join(\n",
-    "        os.path.pardir,\n",
-    "        'utilities_and_data',\n",
-    "        'diabetes.csv'\n",
-    "    )\n",
+    "    os.path.join(os.path.pardir, \"utilities_and_data\", \"diabetes.csv\")\n",
     ")\n",
     "data = pd.read_csv(data_path)\n",
     "# print some basic info()\n",
@@ -483,7 +480,7 @@
    "source": [
     "# modify the data column names slightly for easier typing\n",
     "# rename DiabetesPedigreeFunction to dpf\n",
-    "data.rename(columns={'DiabetesPedigreeFunction': 'dpf'}, inplace=True)\n",
+    "data.rename(columns={\"DiabetesPedigreeFunction\": \"dpf\"}, inplace=True)\n",
     "# make lower\n",
     "data.rename(columns=lambda old_name: old_name.lower(), inplace=True)"
    ]
@@ -498,11 +495,11 @@
    "source": [
     "# removing those observation rows with 0 in selected variables\n",
     "normed_predictors = [\n",
-    "    'glucose',\n",
-    "    'bloodpressure',\n",
-    "    'skinthickness',\n",
-    "    'insulin',\n",
-    "    'bmi'\n",
+    "    \"glucose\",\n",
+    "    \"bloodpressure\",\n",
+    "    \"skinthickness\",\n",
+    "    \"insulin\",\n",
+    "    \"bmi\",\n",
     "]\n",
     "data = data[(data[normed_predictors] != 0).all(axis=1)]"
    ]
@@ -517,8 +514,8 @@
    "source": [
     "# scale the covariates for easier comparison of coefficient posteriors\n",
     "# N.B. int columns turn into floats\n",
-    "data.iloc[:,:-1] -= data.iloc[:,:-1].mean()\n",
-    "data.iloc[:,:-1] /= data.iloc[:,:-1].std()"
+    "data.iloc[:, :-1] -= data.iloc[:, :-1].mean()\n",
+    "data.iloc[:, :-1] /= data.iloc[:, :-1].std()"
    ]
   },
   {
@@ -660,8 +657,8 @@
    "outputs": [],
    "source": [
     "# preparing the inputs\n",
-    "X = data.iloc[:,:-1]\n",
-    "y = data.iloc[:,-1]"
+    "X = data.iloc[:, :-1]\n",
+    "y = data.iloc[:, -1]"
    ]
   },
   {
@@ -683,8 +680,8 @@
    "source": [
     "# get shape into variables\n",
     "n, p = X.shape\n",
-    "print('number of observations = {}'.format(n))\n",
-    "print('number of predictors = {}'.format(p))"
+    "print(\"number of observations = {}\".format(n))\n",
+    "print(\"number of predictors = {}\".format(p))"
    ]
   },
   {
@@ -750,7 +747,7 @@
     }
    ],
    "source": [
-    "with open('logistic_t.stan') as file:\n",
+    "with open(\"logistic_t.stan\") as file:\n",
     "    print(file.read())"
    ]
   },
@@ -770,7 +767,7 @@
     }
    ],
    "source": [
-    "model = stan_utility.compile_model('logistic_t.stan')"
+    "model = stan_utility.compile_model(\"logistic_t.stan\")"
    ]
   },
   {
@@ -800,7 +797,7 @@
     "    p_alpha_scale=2.5,\n",
     "    p_beta_df=7,\n",
     "    p_beta_loc=0,\n",
-    "    p_beta_scale=2.5\n",
+    "    p_beta_scale=2.5,\n",
     ")\n",
     "fit1 = model.sampling(data=data1, seed=74749)\n",
     "samples1 = fit1.extract(permuted=True)"
@@ -1009,11 +1006,11 @@
    "source": [
     "# print summary of selected variables\n",
     "# use pandas data frame for layout\n",
-    "summary = fit1.summary(pars=['alpha', 'beta'])\n",
+    "summary = fit1.summary(pars=[\"alpha\", \"beta\"])\n",
     "pd.DataFrame(\n",
-    "    summary['summary'],\n",
-    "    index=summary['summary_rownames'],\n",
-    "    columns=summary['summary_colnames']\n",
+    "    summary[\"summary\"],\n",
+    "    index=summary[\"summary_rownames\"],\n",
+    "    columns=summary[\"summary_colnames\"],\n",
     ")"
    ]
   },
@@ -1078,11 +1075,11 @@
    "source": [
     "# plot histograms\n",
     "fig, axes = plot_tools.hist_multi_sharex(\n",
-    "    [samples1['alpha']] + [sample for sample in samples1['beta'].T],\n",
-    "    rowlabels=['intercept'] + list(X.columns),\n",
+    "    [samples1[\"alpha\"]] + [sample for sample in samples1[\"beta\"].T],\n",
+    "    rowlabels=[\"intercept\"] + list(X.columns),\n",
     "    n_bins=60,\n",
     "    x_lines=0,\n",
-    "    figsize=(7, 10)\n",
+    "    figsize=(7, 10),\n",
     ")"
    ]
   },
@@ -1109,9 +1106,9 @@
     }
    ],
    "source": [
-    "loo1, loos1, ks1 = psis.psisloo(samples1['log_lik'])\n",
-    "loo1_se = np.sqrt(np.var(loos1, ddof=1)*n)\n",
-    "print('elpd_loo: {:.4} (SE {:.3})'.format(loo1, loo1_se))"
+    "loo1, loos1, ks1 = psis.psisloo(samples1[\"log_lik\"])\n",
+    "loo1_se = np.sqrt(np.var(loos1, ddof=1) * n)\n",
+    "print(\"elpd_loo: {:.4} (SE {:.3})\".format(loo1, loo1_se))"
    ]
   },
   {
@@ -1236,7 +1233,7 @@
     }
    ],
    "source": [
-    "with open('logistic_hs.stan') as file:\n",
+    "with open(\"logistic_hs.stan\") as file:\n",
     "    print(file.read())"
    ]
   },
@@ -1256,7 +1253,7 @@
     }
    ],
    "source": [
-    "model = stan_utility.compile_model('logistic_hs.stan')"
+    "model = stan_utility.compile_model(\"logistic_hs.stan\")"
    ]
   },
   {
@@ -1267,7 +1264,7 @@
    },
    "outputs": [],
    "source": [
-    "p0 = 2 # prior guess for the number of relevant variables\n",
+    "p0 = 2  # prior guess for the number of relevant variables\n",
     "tau0 = p0 / (p - p0) * 1 / np.sqrt(n)\n",
     "data2 = dict(\n",
     "    n=n,\n",
@@ -1279,7 +1276,7 @@
     "    p_alpha_scale=2.5,\n",
     "    p_beta_df=1,\n",
     "    p_beta_global_df=1,\n",
-    "    p_beta_global_scale=tau0\n",
+    "    p_beta_global_scale=tau0,\n",
     ")\n",
     "fit2 = model.sampling(data=data2, seed=74749)\n",
     "samples2 = fit2.extract(permuted=True)"
@@ -1486,11 +1483,11 @@
    "source": [
     "# print summary of selected variables\n",
     "# use pandas data frame for layout\n",
-    "summary = fit2.summary(pars=['alpha', 'beta'])\n",
+    "summary = fit2.summary(pars=[\"alpha\", \"beta\"])\n",
     "pd.DataFrame(\n",
-    "    summary['summary'],\n",
-    "    index=summary['summary_rownames'],\n",
-    "    columns=summary['summary_colnames']\n",
+    "    summary[\"summary\"],\n",
+    "    index=summary[\"summary_rownames\"],\n",
+    "    columns=summary[\"summary_colnames\"],\n",
     ")"
    ]
   },
@@ -1515,11 +1512,11 @@
    "source": [
     "# plot histograms\n",
     "fig, axes = plot_tools.hist_multi_sharex(\n",
-    "    [samples2['alpha']] + [sample for sample in samples2['beta'].T],\n",
-    "    rowlabels=['intercept'] + list(X.columns),\n",
+    "    [samples2[\"alpha\"]] + [sample for sample in samples2[\"beta\"].T],\n",
+    "    rowlabels=[\"intercept\"] + list(X.columns),\n",
     "    n_bins=60,\n",
     "    x_lines=0,\n",
-    "    figsize=(7, 10)\n",
+    "    figsize=(7, 10),\n",
     ")"
    ]
   },
@@ -1546,9 +1543,9 @@
     }
    ],
    "source": [
-    "loo2, loos2, ks2 = psis.psisloo(samples2['log_lik'])\n",
-    "loo2_se = np.sqrt(np.var(loos2, ddof=1)*n)\n",
-    "print('elpd_loo: {:.4} (SE {:.3})'.format(loo2, loo2_se))"
+    "loo2, loos2, ks2 = psis.psisloo(samples2[\"log_lik\"])\n",
+    "loo2_se = np.sqrt(np.var(loos2, ddof=1) * n)\n",
+    "print(\"elpd_loo: {:.4} (SE {:.3})\".format(loo2, loo2_se))"
    ]
   },
   {
@@ -1591,9 +1588,9 @@
    ],
    "source": [
     "elpd_diff = loos2 - loos1\n",
-    "elpd_diff_se = np.sqrt(np.var(elpd_diff, ddof=1)*n)\n",
+    "elpd_diff_se = np.sqrt(np.var(elpd_diff, ddof=1) * n)\n",
     "elpd_diff = np.sum(elpd_diff)\n",
-    "print('elpd_diff: {:.4} (SE {:.3})'.format(elpd_diff, elpd_diff_se))"
+    "print(\"elpd_diff: {:.4} (SE {:.3})\".format(elpd_diff, elpd_diff_se))"
    ]
   }
  ],
