--- a/demos_ch10/demo10_2.ipynb
+++ b/demos_ch10/demo10_2.ipynb
@@ -38,8 +38,9 @@
    "outputs": [],
    "source": [
     "import os, sys\n",
+    "\n",
     "# add utilities directory to path\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -54,7 +55,7 @@
    "outputs": [],
    "source": [
     "# edit default plot settings\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -65,8 +66,26 @@
    "source": [
     "# fake interesting distribution\n",
     "x = np.linspace(-3, 3, 200)\n",
-    "r = np.array([ 1.1 ,  1.3 , -0.1 , -0.7 ,  0.2 , -0.4 ,  0.06, -1.7 ,\n",
-    "               1.7 ,  0.3 ,  0.7 ,  1.6 , -2.06, -0.74,  0.2 ,  0.5 ])\n",
+    "r = np.array(\n",
+    "    [\n",
+    "        1.1,\n",
+    "        1.3,\n",
+    "        -0.1,\n",
+    "        -0.7,\n",
+    "        0.2,\n",
+    "        -0.4,\n",
+    "        0.06,\n",
+    "        -1.7,\n",
+    "        1.7,\n",
+    "        0.3,\n",
+    "        0.7,\n",
+    "        1.6,\n",
+    "        -2.06,\n",
+    "        -0.74,\n",
+    "        0.2,\n",
+    "        0.5,\n",
+    "    ]\n",
+    ")\n",
     "# Estimate the density (named q, to emphesize that it does not need to be\n",
     "# normalized). Parameter bw_method=0.48 is used to mimic the outcome of the\n",
     "# kernelp function in Matlab.\n",
@@ -84,8 +103,8 @@
     "g = stats.norm.pdf(x)\n",
     "w = q / g\n",
     "r = np.random.randn(100)\n",
-    "r = r[np.abs(r) < 3] # remove samples out of the grid\n",
-    "wr = q_func.evaluate(r)/stats.norm.pdf(r)"
+    "r = r[np.abs(r) < 3]  # remove samples out of the grid\n",
+    "wr = q_func.evaluate(r) / stats.norm.pdf(r)"
    ]
   },
   {
@@ -113,19 +132,19 @@
     "fig = plt.figure(figsize=(8, 7))\n",
     "ax1 = fig.add_subplot(2, 1, 1)\n",
     "plot_tools.modify_axes.only_x(ax1)\n",
-    "with plt.style.context(plot_tools.custom_styles['gray_background']):\n",
+    "with plt.style.context(plot_tools.custom_styles[\"gray_background\"]):\n",
     "    ax2 = fig.add_subplot(2, 1, 2, sharex=ax1)\n",
     "# manually hide shared xlables\n",
     "plt.setp(ax1.get_xticklabels(), visible=False)\n",
     "\n",
-    "ax1.plot(x, q, label=r'$q(\\theta)$')\n",
-    "ax1.plot(x, g, label=r'$g(\\theta)$')\n",
-    "ax1.set_title('target and proposal distributions')\n",
+    "ax1.plot(x, q, label=r\"$q(\\theta)$\")\n",
+    "ax1.plot(x, g, label=r\"$g(\\theta)$\")\n",
+    "ax1.set_title(\"target and proposal distributions\")\n",
     "ax1.legend()\n",
     "\n",
-    "ax2.plot(x, w, label=r'$q(\\theta)/g(\\theta)$')\n",
-    "ax2.set_title('samples and importance weights')\n",
-    "ax2.vlines(r, 0, wr, color='#377eb8', alpha=0.4)\n",
+    "ax2.plot(x, w, label=r\"$q(\\theta)/g(\\theta)$\")\n",
+    "ax2.set_title(\"samples and importance weights\")\n",
+    "ax2.vlines(r, 0, wr, color=\"#377eb8\", alpha=0.4)\n",
     "ax2.set_ylim((0, ax2.get_ylim()[1]))\n",
     "ax2.legend()\n",
     "\n",
