--- a/demos_ch2/demo2_2.ipynb
+++ b/demos_ch2/demo2_2.ipynb
@@ -38,7 +38,8 @@
    "source": [
     "# add utilities directory to path\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -53,7 +54,7 @@
    "outputs": [],
    "source": [
     "# edit default plot settings\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -74,14 +75,14 @@
     "# compare 3 cases\n",
     "# arrays of different priors:\n",
     "# Beta(0.485*n, (1-0.485)*n), for n = 2, 20, 200\n",
-    "ap = np.array([0.485 * (2*10**i) for i in range(3)])\n",
-    "bp = np.array([(1-0.485) * (2*10**i) for i in range(3)])\n",
+    "ap = np.array([0.485 * (2 * 10 ** i) for i in range(3)])\n",
+    "bp = np.array([(1 - 0.485) * (2 * 10 ** i) for i in range(3)])\n",
     "# corresponding posteriors with data (437,543)\n",
     "ai = 437 + ap\n",
     "bi = 543 + bp\n",
     "# calculate prior and posterior densities\n",
-    "pdp = beta.pdf(x, ap[:,np.newaxis], bp[:,np.newaxis])\n",
-    "pdi = beta.pdf(x, ai[:,np.newaxis], bi[:,np.newaxis])"
+    "pdp = beta.pdf(x, ap[:, np.newaxis], bp[:, np.newaxis])\n",
+    "pdi = beta.pdf(x, ai[:, np.newaxis], bi[:, np.newaxis])"
    ]
   },
   {
@@ -118,29 +119,34 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(nrows=1, ncols=3, sharex=True, sharey=True, figsize=(20, 4))\n",
+    "fig, axes = plt.subplots(\n",
+    "    nrows=1, ncols=3, sharex=True, sharey=True, figsize=(20, 4)\n",
+    ")\n",
     "plot_tools.modify_axes.only_x(axes)\n",
     "fig.subplots_adjust(hspace=0.4)\n",
     "\n",
     "for i, ax in enumerate(axes):\n",
-    "    post1, = ax.plot(x, pdu, color=plot_tools.lighten('C1'), linewidth=5)\n",
-    "    prior, = ax.plot(x, pdp[i], 'k:')\n",
-    "    post2, = ax.plot(x, pdi[i], color='k', dashes=(6, 8))\n",
-    "    known = ax.axvline(0.485, color='C0')\n",
+    "    (post1,) = ax.plot(x, pdu, color=plot_tools.lighten(\"C1\"), linewidth=5)\n",
+    "    (prior,) = ax.plot(x, pdp[i], \"k:\")\n",
+    "    (post2,) = ax.plot(x, pdi[i], color=\"k\", dashes=(6, 8))\n",
+    "    known = ax.axvline(0.485, color=\"C0\")\n",
     "    ax.set_title(\n",
-    "        r'$\\alpha/(\\alpha+\\beta) = 0.485,\\quad \\alpha+\\beta = {}$'\n",
-    "        .format(2*10**i)\n",
+    "        r\"$\\alpha/(\\alpha+\\beta) = 0.485,\\quad \\alpha+\\beta = {}$\".format(\n",
+    "            2 * 10 ** i\n",
+    "        )\n",
     "    )\n",
-    "axes[0].autoscale(axis='x', tight=True)\n",
-    "axes[0].set_ylim((0,30))\n",
+    "axes[0].autoscale(axis=\"x\", tight=True)\n",
+    "axes[0].set_ylim((0, 30))\n",
     "axes[-1].legend(\n",
     "    (post1, prior, post2, known),\n",
-    "    ( 'posterior with uniform prior',\n",
-    "      'informative prior',\n",
-    "      'posterior with informative prior',\n",
-    "     r'known $\\theta=0.485$ in general population'),\n",
-    "    loc='upper center',\n",
-    "    bbox_to_anchor=(0.5, -0.2)\n",
+    "    (\n",
+    "        \"posterior with uniform prior\",\n",
+    "        \"informative prior\",\n",
+    "        \"posterior with informative prior\",\n",
+    "        r\"known $\\theta=0.485$ in general population\",\n",
+    "    ),\n",
+    "    loc=\"upper center\",\n",
+    "    bbox_to_anchor=(0.5, -0.2),\n",
     ");"
    ]
   },
