--- a/demos_ch2/demo2_4.ipynb
+++ b/demos_ch2/demo2_4.ipynb
@@ -38,7 +38,8 @@
    "source": [
     "# add utilities directory to path\n",
     "import os, sys\n",
-    "util_path = os.path.abspath(os.path.join(os.path.pardir, 'utilities_and_data'))\n",
+    "\n",
+    "util_path = os.path.abspath(os.path.join(os.path.pardir, \"utilities_and_data\"))\n",
     "if util_path not in sys.path and os.path.exists(util_path):\n",
     "    sys.path.insert(0, util_path)\n",
     "\n",
@@ -53,7 +54,7 @@
    "outputs": [],
    "source": [
     "# edit default plot settings\n",
-    "plt.rc('font', size=12)"
+    "plt.rc(\"font\", size=12)"
    ]
   },
   {
@@ -89,7 +90,7 @@
     "pp /= np.sum(pp)\n",
     "\n",
     "# unnormalised non-conjugate posterior in grid\n",
-    "po = beta.pdf(x, a, b)*pp\n",
+    "po = beta.pdf(x, a, b) * pp\n",
     "po /= np.sum(po)\n",
     "# cumulative\n",
     "pc = np.cumsum(po)\n",
@@ -100,7 +101,7 @@
     "r = np.random.rand(n)\n",
     "# map each r into corresponding grid point x:\n",
     "# [0, pc[0]) map into x[0] and [pc[i-1], pc[i]), i>0, map into x[i]\n",
-    "rr = x[np.sum(pc[:,np.newaxis] < r, axis=0)]"
+    "rr = x[np.sum(pc[:, np.newaxis] < r, axis=0)]"
    ]
   },
   {
@@ -137,19 +138,19 @@
     "fig.subplots_adjust(hspace=0.5)\n",
     "\n",
     "# posterior with uniform prior Beta(1,1)\n",
-    "axes[0].plot(x, beta.pdf(x, a+1, b+1))\n",
-    "axes[0].set_title('Posterior with uniform prior')\n",
+    "axes[0].plot(x, beta.pdf(x, a + 1, b + 1))\n",
+    "axes[0].set_title(\"Posterior with uniform prior\")\n",
     "\n",
     "# non-conjugate prior\n",
     "axes[1].plot(x, pp)\n",
-    "axes[1].set_title('Non-conjugate prior')\n",
+    "axes[1].set_title(\"Non-conjugate prior\")\n",
     "\n",
     "# posterior with non-conjugate prior\n",
     "axes[2].plot(x, po)\n",
-    "axes[2].set_title('Posterior with non-conjugate prior')\n",
+    "axes[2].set_title(\"Posterior with non-conjugate prior\")\n",
     "\n",
     "# cosmetics\n",
-    "#for ax in axes:\n",
+    "# for ax in axes:\n",
     "#    ax.set_ylim((0, ax.get_ylim()[1]))\n",
     "\n",
     "# set custom x-limits\n",
@@ -178,7 +179,7 @@
     "# plot samples\n",
     "\n",
     "# apply custom background plotting style\n",
-    "plt.style.use(plot_tools.custom_styles['gray_background'])\n",
+    "plt.style.use(plot_tools.custom_styles[\"gray_background\"])\n",
     "plt.figure(figsize=(8, 6))\n",
     "\n",
     "# calculate histograms and scale them into the same figure\n",
@@ -186,37 +187,28 @@
     "hist_rr = np.histogram(rr, bins=30)\n",
     "plt.barh(\n",
     "    hist_r[1][:-1],\n",
-    "    hist_r[0]*0.025/hist_r[0].max(),\n",
-    "    height=hist_r[1][1]-hist_r[1][0],\n",
+    "    hist_r[0] * 0.025 / hist_r[0].max(),\n",
+    "    height=hist_r[1][1] - hist_r[1][0],\n",
     "    left=0.35,\n",
-    "    align='edge',\n",
-    "    color=plot_tools.lighten('C1', 0.6),\n",
-    "    label='random uniform numbers'\n",
+    "    align=\"edge\",\n",
+    "    color=plot_tools.lighten(\"C1\", 0.6),\n",
+    "    label=\"random uniform numbers\",\n",
     ")\n",
     "plt.bar(\n",
     "    hist_rr[1][:-1],\n",
-    "    hist_rr[0]*0.5/hist_rr[0].max(),\n",
-    "    width=hist_rr[1][1]-hist_rr[1][0],\n",
+    "    hist_rr[0] * 0.5 / hist_rr[0].max(),\n",
+    "    width=hist_rr[1][1] - hist_rr[1][0],\n",
     "    bottom=-0.04,\n",
-    "    align='edge',\n",
-    "    color=plot_tools.lighten('C0'),\n",
-    "    label='posterior samples'\n",
+    "    align=\"edge\",\n",
+    "    color=plot_tools.lighten(\"C0\"),\n",
+    "    label=\"posterior samples\",\n",
     ")\n",
     "# plot cumulative posterior\n",
-    "plt.plot(\n",
-    "    x,\n",
-    "    pc,\n",
-    "    color='C0',\n",
-    "    label='cumulative posterior'\n",
-    ")\n",
+    "plt.plot(x, pc, color=\"C0\", label=\"cumulative posterior\")\n",
     "# turn spines off\n",
     "\n",
     "# legend\n",
-    "plt.legend(\n",
-    "    loc='center left',\n",
-    "    bbox_to_anchor=(1.0, 0.5),\n",
-    "    fontsize=12\n",
-    ")\n",
+    "plt.legend(loc=\"center left\", bbox_to_anchor=(1.0, 0.5), fontsize=12)\n",
     "# set limits\n",
     "plt.xlim((0.35, 0.55))\n",
     "plt.ylim((-0.04, 1.04));"
